--- a/docs/玩法说明/边缘控制（寸止）玩法.md
+++ b/docs/玩法说明/边缘控制（寸止）玩法.md
@@ -13,7 +13,7 @@
 
 # 电脑版相关教程：
   
-客户端下载：[新版电脑客户端使用指南](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+客户端下载：[新版电脑客户端使用指南](../PC版控制客户端.md)
 
 视频教程：[【玩法教程】寸止套装大公开：3步玩出巅峰体验，视频教你征服它_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1WXWpzUEoW/?spm_id_from=333.1007.top_right_bar_window_dynamic.content.click)
 
