--- a/i18n/de/docusaurus-plugin-content-docs/current.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current.json
@@ -1,10 +1,10 @@
 {
   "version.label": {
-    "message": "Weiter",
+    "message": "Nächste",
     "description": "The label for version current"
   },
   "sidebar.tutorialSidebar.category.（电脑版）控制客户端": {
-    "message": "(PC-Version) Kontroll-Client",
+    "message": "（Desktop-Version）Steuerungsclient",
     "description": "The label for category '（电脑版）控制客户端' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.玩法说明": {
