--- a/i18n/de/docusaurus-plugin-content-docs/current/已知问题.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/已知问题.md
@@ -4,8 +4,8 @@ sidebar_position: 99
 
 # Bekannte Probleme
 
-1. Bei einigen Routern kann das Einrichten des Geräts im Netzwerk fehlschlagen. In diesem Fall können Sie einen WLAN-Hotspot von Ihrem Smartphone verwenden.
-2. Wenn das Gerät direkt nach dem Erhalt Verbindungsprobleme hat oder nach der Einrichtung nicht online geht, liegt das möglicherweise an einem leeren Akku. Laden Sie es eine Weile auf oder lassen Sie es angeschlossen und schalten Sie es dann erneut ein und aus.
-3. Starten Sie den mdns-Dienst nur bei stabiler Netzwerkverbindung, da es sonst zu Problemen mit der Domainbindung kommen kann (z. B. im Hotspot-Modus: erst mit dem Hotspot verbinden, dann mdns starten).
-4. Wenn die Netzwerk-Einrichtungsschaltfläche grau ist, nachdem das Smartphone mit dem Gerät verbunden wurde, versuchen Sie, das Smartphone neu zu starten.
-5. Im Hotspot-Verbindungsmodus kann es aufgrund von Netzwerkkarten-Qualitätsbeschränkungen zeitweise zu kurzen Aktionsverzögerungen kommen.
+1. Unter bestimmten Routern kann die Geräteeinrichtung nicht erfolgreich abgeschlossen werden. In diesem Fall kann ein vom Smartphone erstellter WLAN-Hotspot verwendet werden.
+2. Wenn das Gerät direkt nach dem Erhalt entweder die Einrichtung nicht abschließt oder nach erfolgreicher Einrichtung nicht online geht, könnte der Grund ein leerer Akku sein. Laden Sie das Gerät eine Weile oder schließen Sie es an die Stromversorgung an und versuchen Sie es nach einem Neustart erneut.
+3. Starten Sie den mDNS-Dienst unbedingt erst unter stabilen Netzwerkbedingungen, da es sonst zu Anomalien bei der mDNS-Domänenbindung kommen kann (z. B. in einer Smartphone-Hotspot-Umgebung: erst mit dem Hotspot verbinden, dann mDNS starten).
+4. Wenn die Einrichtungsschaltfläche nach der Verbindung des Smartphones mit dem Gerät ausgegraut ist, versuchen Sie, das Smartphone neu zu starten.
+5. Im Hotspot-Verbindungsmodus kann es aufgrund der begrenzten Qualität der Netzwerkkarte in regelmäßigen Abständen zu kurzen Verzögerungen bei Aktionen kommen.
