--- a/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
@@ -1,34 +1,34 @@
-# Liegestütz (ungefähr) Erkennungs-Trainingsspiel
+# Liegestütz-Erkennungstrainingsspiel (ungefähr)
 
-Ein Liegestütz-Trainingsspiel basierend auf einem Abstandssensor. Es erkennt die Ausführung von Liegestützübungen über einen QTZ-Abstandssensor und kombiniert dies mit einem automatischen Schloss, einem Elektrostimulationsgerät und einem Vibrator als Anreiz- bzw. Bestrafungsmechanismen.
+Ein Liegestütz-Trainingsspiel basierend auf einem Abstandssensor. Es erkennt die Ausführung von Liegestützen über den QTZ-Abstandssensor und kombiniert automatische Sperren, Elektroschock- und Vibrationsgeräte für Trainingsmotivation und Bestrafungsmechanismen.
 
-Man kann an der Mundpartie einen kleinen Stab hinzufügen... das wird zu einer neuen Spielweise = =
+Man kann einen kleinen Stab am Mund hinzufügen ~ das wird zu einem neuen Spielmodus = =
 
 Kauf-Link [Taobao Kauf-Link](https://item.taobao.com/item.htm?id=964389698138)
 
 ## Spielübersicht
 ### Spielziel
-+ Eine festgelegte Anzahl von Liegestützen innerhalb einer vorgegebenen Zeit abschließen
-+ Eine standardmäßige Liegestützhaltung beibehalten
-+ Trainingseffekt und Konzentration durch Geräterückmeldungen steigern
++ Eine festgelegte Anzahl Liegestütze innerhalb der gesetzten Zeit absolvieren
++ Eine standardmäßige Liegestütz-Haltung beibehalten
++ Trainingserfolg und Konzentration durch Geräterückmeldung steigern
 
 ### Spielmechanik
-1. **Spielstart**: Das automatische Schloss wird verriegelt, Zeitmessung und Bewegungserkennung beginnen.
-2. **Bewegungserkennung**: Der QTZ-Abstandssensor überwacht in Echtzeit die Veränderung der Körperhöhe.
-3. **Abschlussbeurteilung**: Ein Absenken des Körpers unter die eingestellte Distanz gilt als "unten", ein Anheben über die eingestellte Distanz gilt als "oben".
-4. **Bestrafungsmechanismus**: Längere Inaktivität löst einen Elektroschock mit zufälliger Intensität und Dauer aus.
-5. **Belohnungs-Störung**: Nach einer kontinuierlichen Absolvierung einer bestimmten Anzahl, besteht bei jedem weiteren erfolgreichen Liegestütz eine gewisse Wahrscheinlichkeit, dass eine Vibrator-Störung ausgelöst wird.
-6. **Status-Reset**: Nach einer Bestrafung wird die Zählung für kontinuierlich abgeschlossene Liegestütze auf Null zurückgesetzt und die Belohnungsbeurteilung beginnt von neuem.
-7. **Spielende**: Das Schloss öffnet sich automatisch, wenn die Zielanzahl erreicht ist oder die Zeit abgelaufen ist.
+1. **Spielstart**: Automatisches Sperrgerät wird verriegelt, Zeitnahme und Bewegungserkennung beginnen
+2. **Bewegungserkennung**: QTZ-Abstandssensor überwacht Höhenänderung des Körpers in Echtzeit
+3. **Abschlussbestimmung**: Absenken des Körpers unter einen festgelegten Abstand gilt als "unten", Anheben über einen festgelegten Abstand gilt als "oben"
+4. **Bestrafungsmechanismus**: Längere Inaktivität löst einen Elektroschock mit zufälliger Stärke und Dauer aus
+5. **Belohnungsstörung**: Nach einer festgelegten Anzahl aufeinanderfolgender Abschlüsse löst jeder weitere Abschluss mit einer gewissen Wahrscheinlichkeit eine Vibrationsstörung aus
+6. **Statusrücksetzung**: Nach einer Bestrafung wird die Zählung aufeinanderfolgender Abschlüsse auf Null gesetzt, die Belohnungsbestimmung beginnt neu
+7. **Spielende**: Bei Erreichen der Zielanzahl oder nach Zeitablauf wird automatisch entriegelt
 
 ## Geräteanforderungen
 ### Gerätekonfiguration
 | Gerätetyp | Logische ID | Gerätename | Erforderlich? | Funktion |
 | --- | --- | --- | --- | --- |
-| QTZ | distance_sensor | QTZ Abstandssensor | Ja | Erkennt Körperhöhenveränderung, beurteilt Liegestützausführung |
-| ZIDONGSUO | auto_lock | Automatisches Schloss | Nein | Verriegelt zu Spielbeginn, öffnet nach Abschluss oder Zeitüberschreitung |
-| DIANJI | shock_device | Elektrostimulationsgerät | Nein | Führt Bestrafung bei längerer Inaktivität aus |
-| TD01 | vibrator_device | Vibrator (Springei) | Nein | Zufällige Störung nach kontinuierlich abgeschlossenen Übungen |
+| QTZ | distance_sensor | QTZ-Abstandssensor | Ja | Erkennt Höhenänderung des Körpers, bestimmt Liegestütz-Bewegung |
+| ZIDONGSUO | auto_lock | Automatische Sperre | Nein | Verriegelt bei Spielstart, entriegelt bei Abschluss oder Zeitüberschreitung |
+| DIANJI | shock_device | Elektroschockgerät | Nein | Führt Bestrafung bei längerer Inaktivität aus |
+| TD01 | vibrator_device | Vibrationsgerät | Nein | Zufällige Störung nach aufeinanderfolgenden Abschlüssen |
 
 ## Spielparameter-Konfiguration
 ### Grundparameter
@@ -36,34 +36,34 @@ Kauf-Link [Taobao Kauf-Link](https://item.taobao.com/item.htm?id=964389698138)
 | --- | --- | --- | --- | --- |
 | duration | Zahl | 1-240 Minuten | 15 Minuten | Spieldauer |
 | targetCount | Zahl | 1-2000 Stück | 30 Stück | Zielanzahl der abzuschließenden Liegestütze |
-| downThreshold | Zahl | 5-30 cm | 15 cm | Körper unter dieser Distanz gilt als "unten" |
-| upThreshold | Zahl | 20-50 cm | 35 cm | Körper über dieser Distanz gilt als "oben" |
+| downThreshold | Zahl | 5-30 cm | 15 cm | Absenken des Körpers unter diesen Abstand gilt als "unten" |
+| upThreshold | Zahl | 20-50 cm | 35 cm | Anheben des Körpers über diesen Abstand gilt als "oben" |
 
 ### Bestrafungsmechanismus-Parameter
 | Parametername | Typ | Bereich | Standardwert | Erklärung |
 | --- | --- | --- | --- | --- |
 | idleTimeLimit | Zahl | 10-120 Sekunden | 30 Sekunden | Überschreitung dieser Inaktivitätszeit löst Bestrafung aus |
-| shockIntensity | Zahl | 10-100V | 15V | Basiswert der Elektroschock-Intensität |
-| shockDuration | Zahl | 1-10 Sekunden | 3 Sekunden | Basiswert der Elektroschock-Dauer |
-| randomIntensityRange | Zahl | 0-50V | 10V | Zufällige Schwankungsbreite der Elektroschock-Intensität (± dieser Wert) |
+| shockIntensity | Zahl | 10-100V | 15V | Grundwert für Elektroschock-Stärke |
+| shockDuration | Zahl | 1-10 Sekunden | 3 Sekunden | Grundwert für Elektroschock-Dauer |
+| randomIntensityRange | Zahl | 0-50V | 10V | Zufällige Schwankungsbreite der Elektroschock-Stärke (± dieser Wert) |
 | randomDurationRange | Zahl | 0-5 Sekunden | 1 Sekunde | Zufällige Schwankungsbreite der Dauer (± dieser Wert) |
 
-### Belohnungs-Störungs-Parameter
+### Belohnungsstörungs-Parameter
 | Parametername | Typ | Bereich | Standardwert | Erklärung |
 | --- | --- | --- | --- | --- |
-| rewardTriggerCount | Zahl | 3-20 Stück | 5 Stück | Nach wie vielen kontinuierlich abgeschlossenen beginnt die Belohnungs-Auslösebeurteilung |
-| rewardTriggerProbability | Zahl | 0-100% | 30% | Wahrscheinlichkeit einer Störungsauslösung bei jedem weiteren Abschluss nach Erreichen der Auslösebedingung |
-| vibratorIntensity | Zahl | 1-255 | 100 | Vibrator-Stärke |
-| vibratorDuration | Zahl | 5-60 Sekunden | 15 Sekunden | Vibrator-Arbeitsdauer |
+| rewardTriggerCount | Zahl | 3-20 Stück | 5 Stück | Nach wie vielen aufeinanderfolgenden Abschlüssen die Belohnungsauslösung beginnt |
+| rewardTriggerProbability | Zahl | 0-100% | 30% | Auslösewahrscheinlichkeit für Störung bei jedem Abschluss nach Erreichen der Auslösebedingung |
+| vibratorIntensity | Zahl | 1-255 | 100 | Vibrationsstärke |
+| vibratorDuration | Zahl | 5-60 Sekunden | 15 Sekunden | Vibrationsarbeitsdauer |
 
 ## Spieloberflächen-Erklärung
 ### Hauptelemente der Oberfläche
-+ **Verbleibende Zeit**: Zeigt die verbleibende Spielzeit an.
-+ **Abschlussfortschritt**: Aktuelle Anzahl abgeschlossen / Zielanzahl.
-+ **Bewegungsstatus**: Zeigt die aktuelle Bewegungsphase an (unten/oben).
-+ **Verriegelungsstatus**: Zeigt den aktuellen Status des automatischen Schlosses an.
-+ **Gerätestatus**: Zeigt den Arbeitsstatus der einzelnen Geräte an.
++ **Verbleibende Zeit**: Zeigt die verbleibende Spielzeit an
++ **Abschlussfortschritt**: Aktuelle Abschlussanzahl / Zielanzahl
++ **Bewegungsstatus**: Zeigt die aktuelle Bewegungsphase an (unten/oben)
++ **Verriegelungsstatus**: Zeigt den aktuellen Status der automatischen Sperre an
++ **Gerätestatus**: Zeigt den Arbeitsstatus der einzelnen Geräte an
 
 ## Entwicklungsinformationen
-### Versionshistorie
-+ v1.0.0: Grundlegende Funktionen implementiert
+### Versionsverlauf
++ v1.0.0: Grundfunktionen implementiert
