--- a/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
@@ -1,24 +1,24 @@
-# Spielweise des Beckenbodentrainings
+# Beckenbodentraining-Spielmodus
 
 # Spielbeschreibung
-+ Das Beckenbodentraining erfolgt durch abwechselnde "Entspannungsphasen" und "Beckenbodenanspannungsphasen"
-+ Ziel ist es, innerhalb einer festgelegten Zeit so viele erfolgreiche "Beckenbodenanspannungen" wie möglich durchzuführen
-+ Erfolge oder Misserfolge werden auf der Oberfläche anschaulich angezeigt, bei einem Misserfolg wird ein Elektroschock ausgelöst (falls verbunden und aktiviert)
++ Beckenbodentraining erfolgt durch abwechselnde "Entspannungsphasen" und "Beckenbodenanspannungsphasen"
++ Ziel ist es, innerhalb der vorgegebenen Zeit so viele erfolgreiche "Beckenbodenkontraktionen" wie möglich durchzuführen
++ Erfolg oder Misserfolg wird auf der Benutzeroberfläche klar angezeigt, bei Misserfolg wird ein Elektroschock ausgelöst (falls verbunden und aktiviert)
 
 ## Software-Download und Vorbereitung
-Android-Handy: [Mobile Client (empfohlen: Standard-WiFi verwenden, kein Netzwerksetup durchführen)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
+Android-Handy: [Handy-Client (empfohlen: Standard-WiFi verwenden, kein Netzwerkkonfiguration durchführen)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
 
-Windows-Computer: [Benutzerhandbuch für den neuen PC-Client](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Windows-Computer: [Anleitung für die neue PC-Client-Version](../PC版控制客户端.md)
 
 # Geräte und Vorbereitung
 + Erforderliches Gerät: `Drucksensor (QIYA)`
 + Optionale Geräte: `Elektroschockgerät (DIANJI)`, `Automatisches Schloss (ZIDONGSUO)`
-+ Automatische Verriegelung beim Start, automatische Entriegelung am Ende (falls automatisches Schloss verbunden ist)
++ Automatisches Verriegeln beim Start, automatisches Entriegeln am Ende (falls automatisches Schloss verbunden ist)
 
 ## Gerätezusammenbau
-Nehmen Sie den Aufblasballon vom aufblasbaren Analplug ab und verbinden Sie ihn mit dem Schlauch des Drucksensors. Verbinden Sie den Schlauch des Analplugs mit dem T-Stück des Drucksensors.
+Den Aufblasballon des aufblasbaren Analplugs abnehmen und mit dem Schlauch des Drucksensors verbinden. Den Schlauch des Analplugs mit dem T-Stück des Drucksensors verbinden.
 
-1. So sieht der Analplug bei Erhalt aus (das neue Modell sieht etwas anders aus, hat eine bessere Dichtung und ist ähnlich wie unten)
+1. So sieht der Analplug bei Erhalt aus (das Design der neuen Version hat sich geändert, bessere Dichtung, ähnlich wie unten)
 
 ![1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a.jpeg](./img/9EvIrzfBJGTcxowq/1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a-569828.jpeg)
 
@@ -34,13 +34,13 @@ Nehmen Sie den Aufblasballon vom aufblasbaren Analplug ab und verbinden Sie ihn 
 
 ![1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6.jpeg](./img/9EvIrzfBJGTcxowq/1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6-408833.jpeg)
 
-5. Optional: Verstärkung bei zu schnellem Druckverlust
+5. Optional: Verstärkung bei schnellem Druckverlust
 
 ![1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e.jpeg](./img/9EvIrzfBJGTcxowq/1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e-647342.jpeg)![1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0.jpeg](./img/9EvIrzfBJGTcxowq/1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0-236824.jpeg)
 
-Diesen Verschluss an der Verbindungsstelle festziehen, um den Druckverlust zu verlangsamen.
+Diese Klemme an der Verbindungsstelle festziehen, um die Druckverlustgeschwindigkeit zu verringern.
 
-Kauflink für den Verschluss: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
+Klemmen-Kaufadresse: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
 
 ## Spielzugang
 ![1764167989889-efa0bf30-b385-4c85-ac51-a252ce991eeb.png](./img/9EvIrzfBJGTcxowq/1764167989889-efa0bf30-b385-4c85-ac51-a252ce991eeb-413545.png)
@@ -49,10 +49,10 @@ Kauflink für den Verschluss: [https://item.taobao.com/item.htm?id=724827233726]
 
 # Parametererklärung
 + `Dauer (Minuten)`: Gesamtspieldauer
-+ `Zielanzahl Beckenbodenanspannungen`: Erwartete Anzahl erfolgreicher Anspannungen, dient zur Anzeige des Gesamtfortschritts
-+ `Druckänderungsgrad (kPa)`: Schwellenwert für den erforderlichen Druckanstieg in der Anspannungsphase (relativ zum niedrigsten Druck in der Entspannungsphase)
-+ `Elektroschockstärke (V)`: Stärke des Elektroschocks bei Misserfolg
-+ `Elektroschockdauer (Sekunden)`: Dauer des Elektroschocks bei Misserfolg
++ `Zielanzahl Kontraktionen`: Erwartete Anzahl erfolgreicher Durchgänge, dient zur Anzeige des Gesamtfortschritts
++ `Druckänderung (kPa)`: Schwellenwert für den erforderlichen Druckanstieg in der Anspannungsphase (relativ zum niedrigsten Druck in der Entspannungsphase)
++ `Schockstärke (V)`: Stärke des Elektroschocks bei Misserfolg
++ `Schockdauer (Sekunden)`: Dauer des Elektroschocks bei Misserfolg
 + `Einzelzykluszeit (Sekunden)`: Dauer jeder Phase, standardmäßig 10 Sekunden (Entspannung 10s → Anspannung 10s → Zyklus)
 
 # Spielablauf
@@ -60,44 +60,44 @@ Kauflink für den Verschluss: [https://item.taobao.com/item.htm?id=724827233726]
     - Entspannen und natürlich atmen, das System zeichnet den "niedrigsten Druck" dieser Phase als Referenz auf
     - Nach Ablauf des Countdowns beginnt die Anspannungsphase
 + Anspannungsphase
-    - Innerhalb der Phasendauer muss der Druck auf "niedrigster Druck + Druckänderungsgrad" erhöht werden
-    - Wird das Ziel erreicht, wird es als "erreicht" gewertet, aber die Phase läuft bis zum Countdown-Ende weiter, bevor die nächste Runde beginnt
-    - Wird das Ziel vor Phasenende nicht erreicht, wird "Herausforderung fehlgeschlagen · Elektroschock startet" gewertet (falls Elektroschockgerät verfügbar)
+    - Innerhalb der Phasendauer muss der Druck auf "niedrigster Druck + Druckänderung" erhöht werden
+    - Wird das Ziel erreicht, gilt es als "erreicht", dennoch muss der Countdown dieser Phase ablaufen, bevor die nächste Runde beginnt
+    - Wird das Ziel vor Ende der Phase nicht erreicht, gilt es als "Herausforderung fehlgeschlagen · Schock startet" (falls Elektroschockgerät verfügbar)
 + Phasenwechsel
     - Jede Runde folgt dem Zyklus "Entspannung → Anspannung → Entspannung → …", bis die Zeit abläuft oder die Zielanzahl erreicht ist
 
 # Oberflächenhinweise
-+ Große Schrift oben zeigt aktuelle Phase (Entspannungsphase/Anspannungsphase) und verbleibende Zeit der Phase an
++ Große Schrift oben zeigt aktuelle Phase (Entspannungsphase/Anspannungsphase) und verbleibende Zeit dieser Phase an
 + Gesamtfortschritt
-    - Fortschrittsbalken nach Anzahl: Abgeschlossene Anzahl / Zielanzahl
+    - Fortschrittsbalken nach Anzahl: Abgeschlossene Durchgänge / Zielanzahl
     - Fortschrittsbalken nach Zeit: Verbrauchte Zeit / Gesamtdauer
 + Druck und Ziel
     - Aktueller Druck (kPa)
     - Niedrigster Druck in Entspannungsphase (Referenzwert)
-    - Ziel-Druck für Anspannung (Niedrigster Druck + Druckänderungsgrad)
-+ Erfolgs-/Misserfolgshinweise
-    - Erfolg: Grüne Kapsel "Erreicht" nach der Zahl
-    - Misserfolg: Rote Kapsel "Herausforderung fehlgeschlagen · Elektroschock startet" nach der Zahl
+    - Ziel-Druck für Anspannung (Niedrigster Druck + Druckänderung)
++ Erfolgs-/Misserfolgshinweis
+    - Erfolg: Grüne Kapsel "Erreicht" hinter der Zahl
+    - Misserfolg: Rote Kapsel "Herausforderung fehlgeschlagen · Schock startet" hinter der Zahl
 + Bedienung und Protokoll
-    - Tasten: Pause, manueller Elektroschock
+    - Schaltflächen: Pause, manueller Schock
     - Protokoll: Zeigt letzte Informationen und Systemhinweise an
 
 **Ende und Statistik**
 
-+ Das Spiel endet, wenn die eingestellte Dauer erreicht ist oder die Erfolgsanzahl das Ziel erreicht
-+ Nach Ende automatische Entriegelung (falls automatisches Schloss verbunden)
-+ Oberfläche zeigt kumulierte Erfolgsanzahl und Elektroschockanzahl usw. an
++ Endet, wenn die eingestellte Dauer erreicht ist oder die Zielanzahl erfolgreicher Durchgänge erreicht wurde
++ Automatisches Entriegeln nach Ende (falls automatisches Schloss verbunden ist)
++ Oberfläche zeigt kumulierte Anzahl erfolgreicher Durchgänge und Schockanzahl usw. an
 
-**Verwendungsvorschläge**
+**Nutzungsempfehlungen**
 
-+ Bei erstmaliger Nutzung empfiehlt es sich, den "Druckänderungsgrad" niedrig einzustellen, um den Rhythmus kennenzulernen
-+ Bei angeschlossenem Elektroschockgerät mit niedriger Stärke beginnen und schrittweise anpassen
++ Bei erstmaliger Nutzung empfiehlt es sich, "Druckänderung" niedrig einzustellen, um den Rhythmus kennenzulernen
++ Falls Elektroschockgerät verbunden ist, mit niedriger Stärke beginnen und schrittweise anpassen
 + Ruhig atmen, in der Anspannungsphase konzentriert den Druck bis zum Ziel erhöhen
 
-**Schnelleinstieg**
+**Schnellstart**
 
-+ Drucksensor anschließen (optional Elektroschockgerät, automatisches Schloss anschließen)
++ Drucksensor verbinden (optional Elektroschockgerät, automatisches Schloss verbinden)
 + Parameter einstellen und starten
-+ In der Entspannungsphase nicht anspannen, auf Countdown warten; in der Anspannungsphase anspannen, um das Ziel zu erreichen
-+ Bei "Erreicht" bis zum Ende der Phase halten; bei Misserfolg erscheint Hinweis und Elektroschock
-+ Zyklus bis zum Ende wiederholen, Statistik und Fortschrittsbalken zur Erfolgskontrolle ansehen
++ In Entspannungsphase keine Kraft aufwenden, auf Countdown warten; in Anspannungsphase Kraft aufwenden, um Ziel zu erreichen
++ Bei "Erreicht" bis zum Ende der Phase halten; bei Misserfolg erfolgt Hinweis und Schock
++ Zyklus bis zum Ende wiederholen, Statistik und Fortschrittsbalken zur Erfolgskontrolle nutzen
