--- a/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/边缘控制（寸止）玩法.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/边缘控制（寸止）玩法.md
@@ -1,37 +1,36 @@
-# Edging-Control-Spiel ("Chastity Challenge")
+# Edge Control (寸止) Spielweise
 
-Ein Edging-Trainingsspiel basierend auf einem Drucksensor, das Änderungen des Schließmuskeldrucks erkennt und mit einem exzentrischen Motorcontroller sowie einem Elektroschockgerät intelligente Stimulationssteuerung kombiniert.
+Ein auf Drucksensoren basierendes 寸止-Trainingsspiel, das durch Erkennung von Druckveränderungen des Schließmuskels in Kombination mit einem exzentrischen Motorcontroller und einem Elektrostimulationsgerät eine intelligente Stimulationssteuerung durchführt.
 
 Link zum Kauf des Spielsets:
-
 [https://item.taobao.com/item.htm?id=1017049175869](https://item.taobao.com/item.htm?id=1017049175869)
 
-# Tutorial für die Handy-App-Version:
+# Handy-Version Spielanleitung:
 [https://www.bilibili.com/video/BV1xA1fBsErr/](https://www.bilibili.com/video/BV1xA1fBsErr/?share_source=copy_web&vd_source=3dd9ee8089c213072e87f2745c7050aa)
 
-Originaltutorial auf Yuque: https://www.yuque.com/easysmart/easysmart/oe8gsvyhtflb9pqt
+Yuque Originalanleitung: https://www.yuque.com/easysmart/easysmart/oe8gsvyhtflb9pqt
 
-# Tutorials zur PC-Version:
+# PC-Version verwandte Anleitungen:
 
-Client-Download: [Benutzerhandbuch für die neue PC-Client-Version](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Client-Download: [Anleitung zur Verwendung des neuen PC-Clients](../PC版控制客户端.md)
 
-Video-Tutorial: [【Spielanleitung】Das "Chastity Challenge"-Set enthüllt: Höchstgenuss in 3 Schritten, Video zeigt wie man es meistert_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1WXWpzUEoW/?spm_id_from=333.1007.top_right_bar_window_dynamic.content.click)
+Video-Tutorial: [【玩法教程】寸止套装大公开：3步玩出巅峰体验，视频教你征服它_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1WXWpzUEoW/?spm_id_from=333.1007.top_right_bar_window_dynamic.content.click)
 
-Empfehlung: Nutze Hotspot und das Standard-WLAN, diese Lösung erfordert keine Netzwerkkonfiguration. Wenn du die Router-Lösung verwenden möchtest, **<font>konfiguriere das Gerät bitte vor Spielbeginn für das Netzwerk</font>**. Siehe dazu den Abschnitt zur Netzwerkkonfiguration im linken Inhaltsverzeichnis!
+Es wird empfohlen, Hotspot und Standard-WLAN zu verwenden. Diese Lösung erfordert keine Netzwerkkonfiguration. Wenn Sie die Router-Lösung verwenden möchten, müssen Sie das Gerät vor Spielbeginn **<font>für das Netzwerk konfigurieren</font>**. Bitte sehen Sie sich den Abschnitt zur Netzwerkkonfiguration im linken Inhaltsverzeichnis an.
 
 # Wichtige Hinweise
-1.  Der aufblasbare Analplug wurde verbessert, ist besser abgedichtet, um Luftverlust zu reduzieren, und sieht anders aus als unten abgebildet.
-2.  Der Luftdruck während des Spiels sollte **<font>nicht zu hoch sein</font>** (führt zu Luftverlust), normalerweise sind 22-24 kPa ausreichend, solange sich beim Zusammenziehen eine Änderung zeigt.
-3.  Beim Einführen kann etwas Druck aufgepumpt werden, sonst ist er vielleicht zu weich und geht nicht hinein.
+1.  Der aufblasbare Analplug wurde verbessert, ist dichter und verliert weniger Luft. Er sieht anders aus als unten abgebildet.
+2.  Der Luftdruck während des Spiels sollte **<font>nicht zu hoch sein</font>** (führt zu Luftverlust), normalerweise sind 22-24 ausreichend. Es sollte nur eine Veränderung beim Zusammenziehen spürbar sein.
+3.  Beim Einführen kann etwas Druck aufgepumpt werden, da er sonst zu weich sein könnte.
 
-# Set-Montage (Pflichtlektüre)
-Ziehe den Ballon vom aufblasbaren Analplug ab und verbinde ihn mit dem Schlauch des Drucksensors. Verbinde den Schlauch des Analplugs mit dem T-Stück des Drucksensors.
+# Zusammenbau des Sets (unbedingt lesen)
+Ziehen Sie den Ballon des aufblasbaren Analplugs ab und verbinden Sie ihn mit dem Schlauch des Drucksensors. Verbinden Sie den Schlauch des Analplugs mit dem T-Stück des Drucksensors.
 
 1.  So sieht der Analplug bei Erhalt aus
 
 ![1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a.jpeg](./img/gSDlRL7nWPTFLsZ5/1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a-558371.jpeg)
 
-2.  Ballon abnehmen
+2.  Ballon entfernen
 
 ![1762504385470-71f88bb4-ec46-45a7-b7da-9411e87b312d.jpeg](./img/gSDlRL7nWPTFLsZ5/1762504385470-71f88bb4-ec46-45a7-b7da-9411e87b312d-898307.jpeg)
 
@@ -47,16 +46,16 @@ Ziehe den Ballon vom aufblasbaren Analplug ab und verbinde ihn mit dem Schlauch 
 
 ![1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e.jpeg](./img/gSDlRL7nWPTFLsZ5/1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e-938338.jpeg)![1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0.jpeg](./img/gSDlRL7nWPTFLsZ5/1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0-507329.jpeg)
 
-Ziehe diese Überwurfmutter an der Verbindungsstelle fest, um den Druckverlust zu verringern.
+Diesen Verschluss an der Verbindungsstelle festziehen, um den Druckverlust zu verlangsamen.
 
-Kauflink für die Überwurfmutter: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
+Kaufadresse für den Verschluss: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
 
 ### Spielmechanik
-1.  **Drucküberwachung**: Der Drucksensor erfasst Echtzeit-Änderungen des Schließmuskeldrucks.
+1.  **Drucküberwachung**: Der Drucksensor erfasst Echtzeit-Veränderungen des Schließmuskeldrucks.
 2.  **Intelligente Anpassung**: Stimulation wird reduziert bei hohem Druck und verstärkt bei niedrigem Druck.
-3.  **Elektroschock-Warnung**: Bei Überschreiten des kritischen Drucks wird ein Elektroschock ausgelöst, um den Nutzer wachzurütteln.
-4.  **Verzögerter Start**: Bei niedrigem Druck beginnt die Stimulation erst nach einer Verzögerung und steigt dann langsam an.
-5.  **Dynamisches Gleichgewicht**: Hält einen Zustand nahe dem kritischen Druck aufrecht.
+3.  **Elektrostimulationswarnung**: Bei Überschreiten eines kritischen Druckwerts wird ein Elektrostimulus ausgelöst, um den Benutzer wachzurütteln.
+4.  **Verzögerter Start**: Bei niedrigem Druck beginnt die Stimulation erst nach einer Verzögerung und steigt langsam an.
+5.  **Dynamisches Gleichgewicht**: Hält einen Zustand in der Nähe des kritischen Drucks aufrecht.
 
 ## Zustandsübergangsdiagramm
 ![74a1eaac9cc38189b11547e1e5bff24c.svg](./img/gSDlRL7nWPTFLsZ5/74a1eaac9cc38189b11547e1e5bff24c-359440.svg)
@@ -65,34 +64,34 @@ Kauflink für die Überwurfmutter: [https://item.taobao.com/item.htm?id=72482723
 ### Gerätekonfiguration
 | Gerätetyp | Logische ID | Gerätename | Erforderlich? | Funktion |
 | --- | --- | --- | --- | --- |
-| QIYA | pressure_sensor | Drucksensor | Ja | Erkennt Schließmuskeldruckänderungen |
-| TD01 | motor_controller | Exzentrischer Motorcontroller | Ja | Bietet einstellbare Stimulation |
-| DIANJI | shock_device | Elektroschockgerät | Nein | Warnschock bei zu hohem Druck |
-| ZIDONGSUO | auto_lock | Automatische Verriegelung | Nein | Verriegelt bei Spielstart, entriegelt bei Spielende |
+| QIYA | pressure_sensor | Drucksensor | Ja | Erfasst Druckveränderungen des Schließmuskels |
+| TD01 | motor_controller | Exzentrischer Motorcontroller | Ja | Bietet Stimulation mit einstellbarer Intensität |
+| DIANJI | shock_device | Elektrostimulationsgerät | Nein | Warnstimulation bei zu hohem Druck |
+| ZIDONGSUO | auto_lock | Automatisches Schloss | Nein | Wird zu Spielbeginn verriegelt und am Ende entriegelt |
 
-## Spielparameter-Konfiguration
-### Basisparameter
-| Parametername | Typ | Bereich | Standardwert | Beschreibung |
+## Spielparameterkonfiguration
+### Grundparameter
+| Parametername | Typ | Bereich | Standardwert | Erklärung |
 | --- | --- | --- | --- | --- |
-| duration | Zahl | 1-120 Minuten | 20 Minuten | Spielzeit |
-| criticalPressure | Zahl | 0-40 kPa | 20 kPa | Kritischer Druckwert |
+| duration | Zahl | 1-120 Minuten | 20 Minuten | Spieldauer |
+| criticalPressure | Zahl | 0-40kPa | 20kPa | Kritischer Druckwert |
 | maxMotorIntensity | Zahl | 1-255 | 200 | TD01 Maximalintensität |
 
 ### Stimulationssteuerungsparameter
-| Parametername | Typ | Bereich | Standardwert | Beschreibung |
+| Parametername | Typ | Bereich | Standardwert | Erklärung |
 | --- | --- | --- | --- | --- |
 | lowPressureDelay | Zahl | 1-30 Sekunden | 5 Sekunden | Verzögerungszeit für Stimulation bei niedrigem Druck |
 | stimulationRampRateLimit | Zahl | 1-50 | 10 | Begrenzung der Steigerungsrate der Stimulationsintensität (Änderung pro Sekunde nicht höher als dieser Wert) |
-| pressureSensitivity | Zahl | 0.1-5.0 | 1.0 | Koeffizient für Druckänderungsempfindlichkeit |
-| stimulationRampRandomPercent | Zahl | 0-100% | 0% | Zufällige Störung der Stimulationsintensität in Prozent |
+| pressureSensitivity | Zahl | 0.1-5.0 | 1.0 | Koeffizient für die Empfindlichkeit gegenüber Druckänderungen |
+| stimulationRampRandomPercent | Zahl | 0-100% | 0% | Zufällige Schwankungsprozent der Stimulationsintensität |
 
-### Elektroschock-Parameter
-| Parametername | Typ | Bereich | Standardwert | Beschreibung |
+### Elektrostimulationsparameter
+| Parametername | Typ | Bereich | Standardwert | Erklärung |
 | --- | --- | --- | --- | --- |
-| shockIntensity | Zahl | 10-100 V | 20 V | Elektroschock-Stärke |
-| shockDuration | Zahl | 0.5-5 Sekunden | 1 Sekunde | Elektroschock-Dauer |
+| shockIntensity | Zahl | 10-100V | 20V | Elektrostimulationsintensität |
+| shockDuration | Zahl | 0.5-5 Sekunden | 1 Sekunde | Dauer der Elektrostimulation |
 
-## Algorithmus-Logik
+## Algorithmuslogik
 ### Druck-Intensitäts-Zuordnungsalgorithmus
 ```plain
 if (currentPressure >= criticalPressure) {
@@ -102,6 +101,6 @@ if (currentPressure >= criticalPressure) {
     pressureDiff = criticalPressure - currentPressure
     targetIntensity = (pressureDiff / criticalPressure) * maxMotorIntensity
     
-    // Verzögerter Startmechanismus, allmähliche Intensitätsänderung, zufällige Intensitätsstörung
+    // Verzögerter Startmechanismus, allmähliche Steigerung der Stimulationsintensität, zufällige Schwankung der Stimulationsintensität
 }
 ```
