--- a/i18n/de/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
@@ -1,19 +1,19 @@
-﻿# Einfaches intelligentes Motorsteuerungsgerät (Eier)
+# Einfache intelligente Motorsteuerung (Vibrator) Endgerät
 
 # Kaufadresse:
-[Einfaches intelligertes Motorsteuerungsgerät](https://item.taobao.com/item.htm?id=914799922450)
+[Einfache intelligente Motorsteuerung Endgerät](https://item.taobao.com/item.htm?id=914799922450)
 
-# Produktmerkmale
-1. Drahtlose Steuerung
-2. Python-Steuerung
-3. Unterstützt USB-Eier
-4. Hochkapazitäts-Akku
+# Produkteigenschaften
+1.  Drahtlose Steuerung
+2.  Python-Steuerung
+3.  Unterstützt USB-Vibratoren
+4.  Hochkapazitäts-Akku
 
 
 
 Schalterrichtung: Von der Ladebuchse weg ist EIN, sonst AUS.
 
-# Anleitung zur Verwendung
-1. Steuern des Eiers mit Python, alle 2 Sekunden aktivieren
+# Anleitungen zur Nutzung
+1.  Verwenden Sie Python, um den Vibrator alle 2 Sekunden zu starten.
 
-[Steuerung des Eiers mit Python](../玩法说明/用python控制跳蛋.md)
+[Vibrator mit Python steuern](../玩法说明/用python控制跳蛋.md)
