--- a/i18n/de/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
@@ -1,18 +1,18 @@
-# Einfaches intelligentes Impuls- (Stromstoß-) Terminal
+# Einfaches intelligentes Impuls-(Schock-)Terminal
 
 Kauf-Link: [https://item.taobao.com/item.htm?id=892309919507](https://item.taobao.com/item.htm?id=892309919507)
 
 Wichtige Hinweise:  
-1. **Das Gerät ist standardmäßig im Safe-Modus, bei dem die Spannung nicht höher als 36V ist. Um die Spannung zu erhöhen, setzen Sie die Safe-Eigenschaft des Geräts auf 0. In diesem Modus beträgt die maximale Spannungsbegrenzung 80V. Bitte beachten Sie jedoch, dass Sie in diesem Modus selbst auf die Sicherheit achten müssen. Bei Problemen tragen Sie die Konsequenzen selbst.**  
+1**. Das Gerät befindet sich standardmäßig im sicheren Modus (safe mode), wobei die Spannung 36V nicht überschreitet. Um die Spannung zu erhöhen, setzen Sie das safe-Attribut des Geräts auf 0. In diesem Modus beträgt die maximale Spannungsbegrenzung 80V. Bitte beachten Sie jedoch, dass Sie in diesem Modus selbst auf die Sicherheit achten müssen und für eventuelle Probleme selbst verantwortlich sind.**
 
 2. **Bitte stecken Sie den Stecker vollständig ein, da es sonst keinen Ausgang gibt.**
 
-Zugehörige Anwendungsszenarien
+Verwandte Anwendungsszenarien
 
 1. Vokabeln lernen
 
-[Erklärung zur Funktionsweise der Komponente "Vokabeln lernen mit Stacheln im Oberschenkel"](../玩法说明/锥刺股背单词玩法说明.md)
+[Spielanleitung für die Komponente "Vokabeln lernen mit Beinspitzen"](../玩法说明/锥刺股背单词玩法说明.md)
 
 Produktbeschreibung
 
-Es kann über WLAN mit einem Computer verbunden werden, um die Erzeugung elektrischer Impulse über ein Programm auf dem Computer zu steuern.
+Kann über WLAN mit einem Computer verbunden werden, um die Erzeugung elektrischer Impulse über ein Programm auf dem Computer zu steuern.
