--- a/i18n/en/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
@@ -6,12 +6,12 @@
     3. Run the downloaded file directly.
 2. Download Flash Tool
     1. [https://dl.espressif.com/public/flash_download_tool.zip](https://dl.espressif.com/public/flash_download_tool.zip)
-    2. Unzip and run the tool.
-    3. Usage Guide:
+    2. Extract and run the tool.
+    3. Usage Instructions:
     4. [https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5](https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5)
-    5. Note: In step 3, you need to modify the COM port; other parts remain unchanged.
+    5. Note: In step 3 of the instructions, you need to modify the COM port; other parts remain unchanged.
 3. Download Firmware
     1. [https://github.com/jiandanzhineng/hardware/releases/latest](https://github.com/jiandanzhineng/hardware/releases/latest)
     2. ![1768981515944-c052b509-6ae3-41d5-b212-367666940cfd.png](./img/IpJdu5RTAcw-LC13/1768981515944-c052b509-6ae3-41d5-b212-367666940cfd-449925.png)
-    3. Download the firmware according to the device type (download firmware containing the word "merged") DIANJI - DIANJI (Motor), QIYA - Barometric Sensor, TD01 - Off-Axis Motor Controller, QTZ - Distance Sensor.
-    4. Flash the firmware to the device at address 0x0 using the tool.
+    3. Download the firmware according to the device type (download the firmware with "merged" in the name): Electric Motor - DIANJI, Air Pressure Sensor - QIYA, Off-axis Motor Controller - TD01, Distance Sensor - QTZ.
+    4. Use the tool to flash the firmware to the device at address 0x0.
