--- a/i18n/en/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
@@ -1,15 +1,15 @@
-# Network Configuration via Computer Client (Requires Bluetooth Support on Computer)
+# Network Configuration via PC Client (Requires PC Bluetooth Support)
 
-<font>Note: This method is still being tested and may be unstable. If it fails, you can try ending the configuration process and restarting it, or use other methods.</font>
+<font>Note: This method is still under testing and may be unstable. If it fails, you can try ending the configuration process and starting over, or use another method.</font>
 
-**<font>Note: If you want to use the default WiFi, please do not configure the network. The default WiFi name is 'easysmart' and the password is '11111111'. The device will automatically connect to the default WiFi.</font>**
+**<font>Note: If you want to use the default Wi-Fi, please do not perform network configuration. The default Wi-Fi name is easysmart, password is 11111111. The device will automatically connect to the default Wi-Fi.</font>**
 
 ![1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4.png](./img/hURz820DTNcJYUCH/1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4-096925.png)
 
-1.  Open the client, click on Device Management -> Device Network Configuration.
+1. Open the client, click on Device Management, then Device Network Configuration.
 
 ![1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed.png](./img/hURz820DTNcJYUCH/1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed-155975.png)
 
-2.  Enter the WiFi name and WiFi password (Be careful not to enter them incorrectly, otherwise the device will not be able to connect to the internet even after successful configuration).
-3.  Click 'Modify Configuration'.
-4.  Click 'Start Configuration' to begin the network configuration process.
+2. Enter the Wi-Fi name and Wi-Fi password (Be careful not to enter them incorrectly, otherwise the device will not be able to connect to the internet even after successful configuration).
+3. Click Modify Configuration.
+4. Click Start Configuration to begin the network setup process.
