--- a/i18n/en/docusaurus-plugin-content-docs/current/已知问题.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/已知问题.md
@@ -4,8 +4,8 @@ sidebar_position: 99
 
 # Known Issues
 
-1. Device network configuration may fail on some routers. In such cases, you can use a mobile phone to create a Wi-Fi hotspot for setup.
-2. When the device is first received, if network configuration fails or the device does not come online after configuration, it may be due to low battery. Try charging it for a while or plugging it in, then power cycling the device.
-3. Ensure a stable network environment before enabling mDNS, otherwise it may cause abnormal mDNS domain binding (e.g., in mobile hotspot environments, connect to the hotspot first before enabling mDNS).
-4. If the network configuration button is grayed out after connecting the device to a phone, try restarting the phone.
-5. In hotspot connection mode, depending on the quality of the network card, there may be brief action delays at intervals.
+1. Device network configuration may fail under certain routers; you can try using a mobile hotspot as an alternative.
+2. If the device fails to configure the network or does not come online after configuration when first received, it may be due to low battery. Try charging it for a while or keeping it plugged in, then power cycle the device.
+3. Ensure a stable network condition before enabling mDNS, otherwise it may cause abnormal mDNS domain binding (e.g., in mobile hotspot environments, connect to the hotspot first before enabling mDNS).
+4. If the network configuration button appears grayed out after the phone connects to the device, try restarting the phone.
+5. In hotspot connection mode, limited by the quality of the network card, there may be occasional short delays in actions over time.
