--- a/i18n/en/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
@@ -1,7 +1,7 @@
-# Low-Cost Large Model API Channel for Collaboration
+# Affordable Large Model API Channel for Collaboration
 
-Registration Address: [https://dmx.ezsapi.top/login](https://dmx.ezsapi.top/login)
+Registration URL: [https://dmx.ezsapi.top/login](https://dmx.ezsapi.top/login)
 
-Reference pricing (all major providers are supported):
+Price reference is as follows (all major providers are supported):
 
 ![1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a.png](./img/TzmZXfR3MLY1YFCA/1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a-006145.png)
