--- a/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
@@ -1,69 +1,69 @@
-# Push-up (Approximately) Detection Training Game
+# Push-up (Approximate) Detection Training Game
 
-A push-up training game based on a distance sensor. It uses the QTZ distance sensor to detect the completion of push-up movements, combined with automatic locks, electric shock, and vibrator devices for training incentives and punishment mechanisms.
+A push-up training game based on distance sensors, using QTZ distance sensors to detect push-up completion, combined with automatic locks, electric shock, and vibrator devices for training incentives and punishment mechanisms.
 
-A small stick can be added to the mouth to create a new gameplay style.
+A small stick can be added to the mouth~ to create a new gameplay = =
 
-Purchase Link: [Taobao Purchase Link](https://item.taobao.com/item.htm?id=964389698138)
+Purchase Link [Taobao Purchase Link](https://item.taobao.com/item.htm?id=964389698138)
 
 ## Game Overview
 ### Game Objectives
-+ Complete a specified number of push-ups within the set time.
-+ Maintain a standard push-up posture.
-+ Enhance training effectiveness and focus through device feedback.
++ Complete the specified number of push-ups within the set time
++ Maintain standard push-up posture
++ Enhance training effectiveness and focus through device feedback
 
 ### Game Mechanics
-1. **Game Start**: The automatic lock device engages, starting the timer and movement detection.
-2. **Movement Detection**: The QTZ distance sensor monitors changes in body height in real time.
-3. **Completion Judgment**: The body descending below the set distance is considered "down", and rising above the set distance is considered "up".
-4. **Punishment Mechanism**: Inactivity for an extended period triggers random intensity and duration electric shock punishment.
-5. **Reward Interference**: After consecutively completing a specified number, each subsequent completion has a chance to trigger vibrator interference.
-6. **State Reset**: After being punished, the consecutive completion count resets to zero, restarting the reward judgment.
-7. **Game End**: Automatic unlock upon reaching the target count or when time expires.
+1. **Game Start**: The automatic lock device locks, and timing and action detection begin
+2. **Action Detection**: QTZ distance sensor monitors body height changes in real-time
+3. **Completion Judgment**: Body descending below the set distance is considered "down," and rising above the set distance is considered "up"
+4. **Punishment Mechanism**: Prolonged inactivity triggers random intensity and duration electric shock punishment
+5. **Reward Interference**: After consecutively completing a specified number, each completion has a probability of triggering vibrator interference
+6. **State Reset**: After being punished, the consecutive completion count resets to zero, and reward judgment restarts
+7. **Game End**: Automatically unlocks when the target count is reached or time expires
 
-## Equipment Requirements
-### Equipment Configuration
-| Equipment Type | Logic ID | Equipment Name | Required? | Purpose |
+## Device Requirements
+### Device Configuration
+| Device Type | Logical ID | Device Name | Required | Purpose |
 | --- | --- | --- | --- | --- |
-| QTZ | distance_sensor | QTZ Distance Sensor | Yes | Detects body height changes to judge push-up movements. |
-| ZIDONGSUO | auto_lock | Automatic Lock | No | Locks at game start, unlocks upon completion or timeout. |
-| DIANJI | shock_device | Electric Shock Device | No | Executes punishment during prolonged inactivity. |
-| TD01 | vibrator_device | Vibrator Device | No | Random interference after consecutive completion of movements. |
+| QTZ | distance_sensor | QTZ Distance Sensor | Yes | Detects body height changes, judges push-up actions |
+| ZIDONGSUO | auto_lock | Automatic Lock | No | Locks at game start, unlocks upon completion or timeout |
+| DIANJI | shock_device | Electric Shock Device | No | Executes punishment during prolonged inactivity |
+| TD01 | vibrator_device | Vibrator Device | No | Random interference after consecutive action completions |
 
 ## Game Parameter Configuration
 ### Basic Parameters
 | Parameter Name | Type | Range | Default Value | Description |
 | --- | --- | --- | --- | --- |
-| duration | Number | 1-240 minutes | 15 minutes | Game duration. |
-| targetCount | Number | 1-2000 reps | 30 reps | Target number of push-ups to complete. |
-| downThreshold | Number | 5-30 cm | 15 cm | Body descending below this distance is considered "down". |
-| upThreshold | Number | 20-50 cm | 35 cm | Body rising above this distance is considered "up". |
+| duration | Number | 1-240 minutes | 15 minutes | Game duration |
+| targetCount | Number | 1-2000 reps | 30 reps | Target number of push-ups to complete |
+| downThreshold | Number | 5-30 cm | 15 cm | Body descending below this distance is considered "down" |
+| upThreshold | Number | 20-50 cm | 35 cm | Body rising above this distance is considered "up" |
 
 ### Punishment Mechanism Parameters
 | Parameter Name | Type | Range | Default Value | Description |
 | --- | --- | --- | --- | --- |
-| idleTimeLimit | Number | 10-120 seconds | 30 seconds | Exceeding this time of inactivity triggers punishment. |
-| shockIntensity | Number | 10-100V | 15V | Base value for electric shock intensity. |
-| shockDuration | Number | 1-10 seconds | 3 seconds | Base value for electric shock duration. |
-| randomIntensityRange | Number | 0-50V | 10V | Random electric shock intensity variation range (± this value). |
-| randomDurationRange | Number | 0-5 seconds | 1 second | Random duration variation range (± this value). |
+| idleTimeLimit | Number | 10-120 seconds | 30 seconds | Punishment triggered if inactive beyond this time |
+| shockIntensity | Number | 10-100V | 15V | Base electric shock intensity |
+| shockDuration | Number | 1-10 seconds | 3 seconds | Base electric shock duration |
+| randomIntensityRange | Number | 0-50V | 10V | Random electric shock intensity variation (± this value) |
+| randomDurationRange | Number | 0-5 seconds | 1 second | Random duration variation (± this value) |
 
 ### Reward Interference Parameters
 | Parameter Name | Type | Range | Default Value | Description |
 | --- | --- | --- | --- | --- |
-| rewardTriggerCount | Number | 3-20 reps | 5 reps | Number of consecutive completions required to start reward trigger judgment. |
-| rewardTriggerProbability | Number | 0-100% | 30% | Probability of interference triggering per completion after meeting the trigger condition. |
-| vibratorIntensity | Number | 1-255 | 100 | Vibrator intensity. |
-| vibratorDuration | Number | 5-60 seconds | 15 seconds | Vibrator operation duration. |
+| rewardTriggerCount | Number | 3-20 reps | 5 reps | Number of consecutive completions required to start reward trigger judgment |
+| rewardTriggerProbability | Number | 0-100% | 30% | Probability of interference trigger per completion after meeting trigger conditions |
+| vibratorIntensity | Number | 1-255 | 100 | Vibrator intensity |
+| vibratorDuration | Number | 5-60 seconds | 15 seconds | Vibrator operating time |
 
 ## Game Interface Description
 ### Main Interface Elements
-+ **Remaining Time**: Displays the remaining game time.
-+ **Completion Progress**: Current count / Target count.
-+ **Movement Status**: Displays the current movement phase (down/up).
-+ **Lock Status**: Displays the current state of the automatic lock.
-+ **Device Status**: Displays the operational status of each device.
++ **Remaining Time**: Displays remaining game time
++ **Completion Progress**: Current completion count / target count
++ **Action Status**: Displays current action phase (down/up)
++ **Lock Status**: Displays current status of the automatic lock
++ **Device Status**: Displays working status of each device
 
 ## Development Information
 ### Version History
-+ v1.0.0: Basic functionality implemented.
++ v1.0.0: Basic functionality implemented
