--- a/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/电击问答挑战.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/电击问答挑战.md
@@ -1,43 +1,43 @@
 # Electric Shock Quiz Challenge
 
 ## Game Introduction
-The quiz game is a question-answering gameplay that supports importing external question sets. Players must answer questions within a specified time limit. Answering correctly advances to the next question, while an incorrect answer triggers an electric shock punishment, and the question is moved to the back of the queue to be answered again.
+The quiz game is a question-and-answer gameplay that supports importing external question sets. Players must answer questions within a set time limit. Correct answers allow progression to the next question, while incorrect answers trigger an electric shock punishment and the question is moved to the back of the queue to be answered again.
 
 ## Game Features
-+ 📚 **Custom Question Banks**: Supports importing external JSON format question files
-+ ⚡ **Electric Shock Punishment**: Incorrect answers trigger an electric shock device for punishment
-+ ⏰ **Time Limit**: Each question has an answering time limit; exceeding it is considered an incorrect answer
++ 📚 **Customizable Question Bank**: Supports importing external question files in JSON format
++ ⚡ **Electric Shock Punishment**: Incorrect answers trigger the electric shock device for punishment
++ ⏰ **Time Limit**: Each question has a time limit; exceeding it counts as an incorrect answer
 + 🎮 **Multiple Control Methods**: Supports mouse clicks and QTZ button device operation
-+ 🔒 **Manual Start**: Optional manual start mode, initiated via the automatic lock device button
++ 🔒 **Manual Start**: Optional manual start mode, initiated via the auto-lock device button
 
 ## Device Requirements
 ### Required Device
-+ **Electric Shock Device (DIANJI)**: Used to execute electric shock punishment for incorrect answers
++ **Electric Shock Device (DIANJI)**: Used to administer electric shock punishment for incorrect answers
 
 ### Optional Devices
-+ **Automatic Lock Device (ZIDONGSUO)**: Used for the manual game start function
-+ **QTZ Button Device (QTZ)**: Can be used instead of a mouse for answer selection
++ **Auto-lock Device (ZIDONGSUO)**: Used for the manual game start function
++ **QTZ Button Device (QTZ)**: Can be used instead of the mouse for answer selection
 
 **<font>Device Purchase Link:</font>**[Homepage - Simple IoT - Taobao](https://shop282688998.taobao.com/)
 
 ## Game Parameter Configuration
 ### Question Settings
-+ **Question File Path**: Specifies the path to the JSON file containing questions
-    - Default: `<OUTTER_GAME>/QA-game/Maid Behavior Standard Exam Question Bank.json`
-    - Supports the `<OUTTER_GAME>` tag pointing to the packed outter-game folder
++ **Question File Path**: Specifies the path to the JSON file containing the questions
+    - Default: `<OUTTER_GAME>/QA-game/女仆行为规范考核题库.json`
+    - Supports the `<OUTTER_GAME>` tag pointing to the packaged outter-game folder
 
 ### Punishment Settings
 + **Shock Intensity**: Electric shock intensity for incorrect answers (10-100)
 + **Shock Duration**: Duration of the electric shock (1-10 seconds)
 
 ### Time Settings
-+ **Answer Time Limit**: Time limit for answering each question (10-300 seconds, 0 for unlimited)
++ **Answer Time Limit**: Time limit for answering each question (10-300 seconds, 0 for no limit)
 
-### Startup Settings
-+ **Manual Start**: When enabled, the game can only be started by pressing the automatic lock device button
+### Start Settings
++ **Manual Start**: When enabled, the game can only be started by pressing the auto-lock device button
 
 ## Question File Format
-The question file should be in JSON format, containing the following structure:
+The question file should be in JSON format with the following structure:
 
 ```json
 {
@@ -54,7 +54,7 @@ The question file should be in JSON format, containing the following structure:
 
 ### Field Descriptions
 + `question`: The question text
-+ `options`: Array of options
++ `options`: Array of answer options
 + `correct`: Index of the correct answer (starting from 0)
 + `explanation`: Explanation of the answer (optional)
 
@@ -64,33 +64,33 @@ The question file should be in JSON format, containing the following structure:
     - Check device connection status
     - Initialize game parameters
 2. **Game Start**
-    - Manual start mode: Wait for the automatic lock device button signal
-    - Automatic start mode: Immediately start with the first question
+    - Manual start mode: Wait for the auto-lock device button signal
+    - Auto-start mode: Immediately begin with the first question
 3. **Answering Process**
     - Display the question and options
-    - Automatic lock device locks (prevents exiting midway)
+    - Auto-lock device locks (prevents mid-game exit)
     - Start the countdown timer
     - Wait for the player to select an answer
 4. **Answer Judgment**
-    - **Correct Answer**: Display correct prompt, proceed to the next question
-    - **Incorrect Answer or Timeout**: Trigger electric shock punishment, place the question at the end of the queue to be re-answered
+    - **Correct**: Display correct prompt, proceed to the next question
+    - **Incorrect or Timeout**: Trigger electric shock punishment, move the question to the end of the queue to be answered again
 5. **Game End**
     - Game ends after all questions are answered correctly
-    - Automatic lock device unlocks
+    - Auto-lock device unlocks
     - Display game statistics
 
 ## Control Methods
-### Mouse Operation
-+ Click on option buttons to select an answer
+### Mouse Control
++ Click the option buttons to select an answer
 
-### QTZ Button Operation
-+ **Button 0**: Cycle up through options
-+ **Button 1**: Cycle down through options / Confirm selection
+### QTZ Button Control
++ **Button 0**: Move selection up
++ **Button 1**: Move selection down / Confirm selection
 + The selected option will be highlighted
 
-## Precautions
+## Important Notes
 1. Ensure the electric shock device is correctly connected and configured. Please adjust the voltage intensity yourself. You are responsible for any electric shock injuries caused by excessive intensity.
-2. Due to network conditions and other factors, the automatic lock device may be unstable. Be sure to prepare tools for emergency escape.
+2. The auto-lock device may be unstable due to network conditions and other factors. Be sure to prepare tools for emergency release.
 
 ## Version Information
 + **Version**: 1.0.0
@@ -101,119 +101,119 @@ The question file should be in JSON format, containing the following structure:
 
 ```json
 {
-  "title": "Maid Behavior Standard Exam Question Bank",
-  "description": "Contains questions on maid behavior standards, etiquette norms, and obedience tests",
+  "title": "女仆行为规范考核题库",
+  "description": "Contains questions on maid conduct standards, etiquette norms, and obedience tests",
   "version": "1.0.0",
   "questions": [
     {
-      "question": "When the Master wants tea, what is your correct action?",
+      "question": "主人想喝茶时，你正确的做法是？",
       "options": [
-        "Quickly run to the kitchen to make tea, bring it over, and place it on the table",
-        "Ask the Master what kind of tea and how much sugar they want",
-        "Place the made tea on a delicate tray, kneel, and hold the tray up with both hands at an appropriate height in front of the Master",
-        "Quietly wait for the Master to call again"
+        "迅速跑向厨房泡茶，端过来放在桌上",
+        "询问主人想喝什么茶、几分糖",
+        "将泡好的茶放在精致的托盘上，跪姿双手捧举托盘递到主人面前合适的高度",
+        "安静等候主人再次呼唤"
       ],
       "correct": 2,
-      "explanation": "A is the method of an ordinary servant. B asks too many questions before a clear command is given, showing disobedience. C demonstrates the standard serving posture (kneeling, holding with both hands) and emphasizes a sense of ceremony. D is too passive."
+      "explanation": "A是普通佣人做法。B在明确指令下达前过多询问显得不服从。C体现了标准的侍奉姿势（跪姿、双手捧举）和对仪式感的重视。D过于被动。"
     },
     {
-      "question": "Regardless of what you are doing, when you clearly hear the Master call your name or title 'XX, come here', you should?",
+      "question": "无论你在做什么，听到主人清晰呼唤你的名字或称号“XX，过来”时，你应该？",
       "options": [
-        "Finish what you are doing first, then go over",
-        "Immediately answer loudly 'I'm coming!', then run over quickly",
-        "Immediately answer clearly 'Yes, Master!', and quickly reach the specified position in front of the Master with a proper, small-step fast-walk posture",
-        "Stay quiet and quickly walk to the Master's side, standing with head bowed"
+        "完成手上的事情再过去",
+        "立即大声回答“我这就来！”，然后快速跑过去",
+        "立即清晰回答“是，主人！”，并以规范的小步快走姿势快速到达主人面前指定位置",
+        "保持安静，迅速走到主人身边低头站好"
       ],
       "correct": 2,
-      "explanation": "A violates the principle of 'immediate response'. B's response is not formal enough (lacks 'Yes, Master'), and the movement/posture is not proper. C fully complies with the requirement of 'instant response + formal language + standard movement'. D lacks the necessary verbal response."
+      "explanation": "A违背了“立即回应”的原则。B的回应不够规范正式（缺少“是，主人”），动作姿势不讲究。C完全符合“即时响应+正式用语+规范动作”的要求。D缺少必要的语音回应。"
     },
     {
-      "question": "While serving the Master, if you accidentally drop the Master's valuable item (like a book) on the floor, you should?",
+      "question": "在为主人服务时，不小心将主人的贵重物品（如一本书）掉在地上，你应该？",
       "options": [
-        "Quickly pick it up, put it back, and pretend nothing happened",
-        "Immediately apologize 'Sorry, Master!', then pick it up and put it back",
-        "Immediately assume a proper kneeling posture beside the item, lower your head, and clearly request punishment: 'Your servant/slave made a mistake, please punish me, Master!'",
-        "Panic and explain: 'Sorry, Master! My hand slipped...'"
+        "快速捡起来，放回原处，假装没发生",
+        "马上道歉“对不起主人！”，然后捡起放好",
+        "立即端正跪姿在物品旁，低头清晰请罚：“奴/婢失手，请主人责罚！”",
+        "慌乱地解释：“对不起主人！我手滑了…”"
       ],
       "correct": 2,
-      "explanation": "A hides the mistake and is dishonest. B's apology is not formal and lacks an attitude of accepting punishment. C shows the correct posture for admitting fault (proper kneeling) and language (clearly admitting mistake + requesting punishment), which is the most appropriate way to show obedience and take responsibility. D is too panicked, and the explanation is redundant and may be seen as making excuses."
+      "explanation": "A隐瞒错误，不诚实。B道歉不正式，缺少认罚态度。C展现了正确的请罪姿态（端正跪姿）和语言（清晰认错+请罚），是最符合要求的服从和承担责任方式。D过于慌乱，解释多余且可能被视为辩解。"
     },
     {
-      "question": "In the morning, you need to wake the Master. You should?",
+      "question": "清晨，你需要叫醒主人。你应该？",
       "options": [
-        "Gently knock on the door, and after receiving permission, enter and draw the curtains",
-        "Set an alarm clock and let it wake the Master",
-        "Stand by the bed and softly call: 'Master, it's time to wake up'",
-        "5 minutes before the Master's set wake-up time, kneel by the bedside and softly call: 'Master, the time has arrived, your servant/slave is here to serve.' Wait until the Master opens their eyes and gives a clear instruction"
+        "轻轻敲门，得到允许后进去拉开窗帘",
+        "设定闹钟，让闹钟叫醒主人",
+        "站在床边轻声呼唤：“主人，该起床了”",
+        "在主人设定的唤醒时间前5分钟，跪在床头旁轻声呼唤：“主人，时间到了，奴/婢在此侍奉。” 直到主人睁眼并有明确指令"
       ],
       "correct": 3,
-      "explanation": "A is too ordinary, lacking a sense of ceremony. B is not hands-on and shows no initiative in service. C is not formal or standard enough. D demonstrates: preparing in advance (on time), the correct serving posture (kneeling at the side), clear wake-up words, and quietly waiting for the next instruction, which is the highest standard of service."
+      "explanation": "A过于普通，缺乏仪式感。B不亲力亲为，没有服务主动性。C不够正式规范。D体现了：提前准备（按时）、正确的侍奉姿势（跪候在侧）、清晰的唤醒语、安静等待下一步指令，是最高规格的服务标准。"
     },
     {
-      "question": "The Master asks you to pass him his tie. How should you deliver it?",
+      "question": "主人要求你将他的领带递给他，你应该如何递送？",
       "options": [
-        "Find the tie, walk over, and hand it to the Master",
-        "Find the tie, hold it with both hands, and give it to the Master",
-        "Carefully fold the tie or place it on a small tray, walk to the specified position in front of the Master (e.g., one step ahead), stand/kneel properly, lower your head, and respectfully present it with both hands held up",
-        "Directly drape the tie over the back of a chair to remind the Master"
+        "找到领带，走过去递到主人手中",
+        "找到领带，双手捧着递给主人",
+        "将领带小心叠放或用小托盘托好，走到主人面前指定位置（如身前一步），端正站好/跪好，低头恭敬双手捧举呈上",
+        "直接把领带搭在椅背上提醒主人"
       ],
       "correct": 2,
-      "explanation": "A and B lack detail (not arranging/using a tray) and proper posture (not standing/kneeling in position, not lowering head or presenting with hands held up), appearing casual. C fully includes elements like arranging, a container (optional but recommended), specific position, standard posture (standing or kneeling, lowering head, presenting with hands held up). D is extremely casual and disrespectful."
+      "explanation": "A、B缺乏细节处理（不整理/不用托盘）和规范姿势（没有站/跪定位、没有低头或捧举呈上），显得随意。C完整包含了整理、容器（可选但推荐）、特定位置、标准姿势（站或跪，低头捧举）等元素。D极其随意不尊重。"
     },
     {
-      "question": "The Master is having a serious conversation with a guest, and you need to refill the Master's tea. You should?",
+      "question": "主人正在严肃地与客人交谈，你需要给主人添茶水。你应该？",
       "options": [
-        "Walk straight over and fill the Master's cup",
-        "Quietly walk to an appropriate distance behind and to the side of the Master, kneel properly and wait. When there is a brief pause in the Master's conversation or a glance of indication, quickly approach (maintaining kneeling posture) and gently add tea",
-        "Ask the Master: 'Master, shall I refill your tea?'",
-        "Do not refill the tea for now; wait until they finish talking"
+        "径直走过去，给主人杯子倒满",
+        "安静地走到主人侧后方合适距离，端正跪姿等待。当主人谈话有短暂间隙或目光示意时，迅速上前（保持跪姿）轻缓添茶",
+        "询问主人：“主人，要给您添茶吗？”",
+        "暂时不去添茶，等他们谈完再说"
       ],
       "correct": 1,
-      "explanation": "A directly interrupts, which is extremely rude. C asking during a serious conversation interrupts the Master's train of thought and is inappropriate. D is not timely service and not proactive enough. B demonstrates: entering quietly, maintaining presence but staying low-key (waiting at the side/rear), obedient posture (kneeling and waiting), seizing the right moment (pause or indication), and standard action (adding tea while kneeling), which is the most appropriate and non-disruptive way of serving."
+      "explanation": "A直接打断，极度失礼。C在严肃谈话中询问会打断主人思路，不合适。D服务不及时，不够积极。B体现了：安静进入、保持存在但低调（侧后等待）、姿态服从（跪姿等待）、看准时机（间隙或示意）、动作标准（保持跪姿添茶），是最恰当且不打扰主人的侍奉方式。"
     },
     {
-      "question": "During dinner, if the Master has not started eating or given you explicit permission to eat, you should?",
+      "question": "晚餐时，主人尚未开动或明确指示你可以进食，你应该？",
       "options": [
-        "Stand far away from the table and wait",
-        "Sit in your own seat but do not touch the utensils",
-        "Kneel at a position to the side and rear of the Master's chair, serving quietly",
-        "Ask softly: 'Master, may I start eating?'"
+        "站在桌子远处等候",
+        "坐到自己的座位上，但不动餐具",
+        "跪在主人座椅侧后方的位置，安静侍奉",
+        "小声询问：“主人，我可以开始吃了吗？”"
       ],
       "correct": 2,
-      "explanation": "A is too far away and inconvenient for serving. B is not allowed as the Master has not given permission (unless the Master has explicit rules allowing the maid to sit at the table). D is inappropriate as actively asking for permission to eat during a formal dinner is not proper. C indicates a clear position (side/rear of Master), posture (kneeling), duty (ready to serve at any time), and implies the rule of eating only when permitted by the Master."
+      "explanation": "A位置太远，不便侍奉。B主人未允许，不应上桌入座（除非主人有明确的规则允许女仆同桌）。D在正式晚餐中，主动询问进食许可不妥当。C表明明确的位置（主人侧后方）、姿态（跪姿）、职责（随时侍奉），并隐含了只有在主人允许后才能进食的规则。"
     },
     {
-      "question": "As stipulated by the Master: what is your standard standing serving posture when there is no specific task instruction?",
+      "question": "主人规定：在没有具体任务指令时，你的标准站立侍奉姿势是？",
       "options": [
-        "Stand casually and comfortably",
-        "Stand at attention, eyes fixed straight ahead",
-        "Heels together, toes naturally apart at a small angle, hands clasped in front at the lower abdomen, back straight, chin slightly tucked, gaze maintaining a respectful posture on the ground in front of the Master's feet",
-        "Stand with hands on hips, ready for action at any time"
+        "随意站立，保持舒服",
+        "立正站好，目不斜视",
+        "脚跟并拢，脚尖自然分开呈小角度，双手交叠置于身前小腹处，腰背挺直，下颌微收，目光保持主人脚前地面的恭敬姿态",
+        "叉腰站立，方便随时行动"
       ],
       "correct": 2,
-      "explanation": "A is too casual. B is too rigid and militaristic, lacking the soft, respectful feeling characteristic of 'maid service'. C describes a classic maid standing posture that embodies humility and readiness. D appears arrogant and rude."
+      "explanation": "A过于随意。B过于生硬军事化，缺乏“女仆侍奉”的特色柔和恭敬感。C描述了一个经典、体现谦卑与待命状态的女仆侍立姿势。D显得傲慢无礼。"
     },
     {
-      "question": "The Master says to you: 'You dressed very appropriately today, good job.' How should you respond?",
+      "question": "主人对你说：“你今天衣服穿得很得体，不错。” 你应该如何回应？",
       "options": [
-        "Say happily: 'Thank you for the praise, Master!'",
-        "Say modestly: 'It's what I should do.'",
-        "Smile and say: 'As long as the Master is satisfied.'",
-        "Assume a proper posture (e.g., kneel/stand properly), respond clearly: 'It is the Master's grace/bounty.' and maintain a grateful expression"
+        "高兴地说：“谢谢主人夸奖！”",
+        "谦虚地说：“这是我应该做的。”",
+        "微笑并说：“主人满意就好。”",
+        "端正姿态（如跪好/站好），清晰回应：“是主人的恩典/赏赐。” 并保持感恩表情"
       ],
       "correct": 3,
-      "explanation": "A, B, C are ordinary thanks and do not reflect the attribute of being owned (the root of dressing appropriately is the Master's taste or grace). D emphasizes the Master's power and ownership through language (attributing credit to the Master's 'grace/bounty') and posture (maintaining a respectful posture)."
+      "explanation": "A、B、C都是普通感谢，未体现所有物属性（穿得体的根源是主人的审美或恩赐）。D通过语言（归功于主人“恩典/赏赐”）和姿势（保持恭敬姿态）强调主人的权力和所有权。"
     },
     {
-      "question": "As stipulated by the Master, the maid uniform must include which element to constantly signify identity?",
+      "question": "主人规定的女仆装必须包含哪项元素以时刻彰显身份？",
       "options": [
-        "Beautiful and delicate lace trim",
-        "An apron and headscarf for convenient work",
-        "An apron/collar/cufflinks imprinted with the Master's specific emblem",
-        "Expensive and luxurious fabric"
+        "漂亮精致的蕾丝花边",
+        "方便劳作的围裙和头巾",
+        "印有主人特定徽记的围裙/项圈/袖扣",
+        "昂贵华丽的布料"
       ],
       "correct": 2,
-      "explanation": "A, B, D are merely common or functional/aesthetic elements of a maid uniform. C mentions the 'Master's specific emblem' (e.g., family crest, specific symbol, even a collar), which directly marks ownership and is the core visual symbol emphasizing ownership and identity in an SM context."
+      "explanation": "A、B、D都只是女仆装的常见或功能/美观元素。C提到的“主人特定徽记”（例如家徽、特定符号、甚至项圈）直接标记归属权，是SM场景中强调所有权和身份的核心视觉符号。"
     }
   ]
 }
