--- a/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
@@ -1,108 +1,108 @@
 # Tiptoe Punishment Gameplay v2
 
-High-tech Somatosensory Self-discipline Training Game - Tiptoe Standing Challenge
+High-tech Sensory Self-discipline Training Game - Tiptoe Standing Challenge
 
 ### V1.4.0 Update Content:
-1.  **Added TD01 Device**: Prevents long periods of boredom. Activates after no shock is triggered for a certain time, with intensity gradually increasing.
-2.  **Added 'zidongsuo' button press to start game operation**: Convenient for single-player operation. After enabling manual start mode, the game can be started via a button press.
-3.  **'zidongsuo' and TD01 are optional devices**: The game can be played normally without these devices, requiring only a shock device and QTZ sensor.
+1.  **Added TD01 Device**: Prevents prolonged boredom; activates after a certain period without triggering shocks, with gradually increasing intensity.
+2.  **Added `zidongsuo` Button Start Game Operation**: Facilitates single-player operation. After enabling manual start mode, the game can be started via a button press.
+3.  **`zidongsuo` and TD01 are Optional Devices**: The game can be played normally without these devices; only the shock device and QTZ sensor are required.
 
 ## 🎮 Detailed Gameplay
 ### 📋 Game Preparation
 #### 1. Device Configuration
 The system automatically connects four core devices:
 
-+ 🔒 **Auto Lock**: Locks at game start to prevent quitting mid-game (optional device).
-+ ⚡ **Shock Device**: Provides instant feedback/punishment.
-+ 📡 **QTZ Laser Sensor**: Monitors whether heels are lowered via dual buttons (placed under the heels).
-+ 🎮 **TD01 Device**: Optional enhancement device. Activates after no shock is triggered for a set duration, gradually increasing intensity to interfere with tiptoeing.
++ 🔒 **Auto-lock**: Locks at game start to prevent mid-game quitting (optional device)
++ ⚡ **Shock Device**: Provides immediate feedback/punishment
++ 📡 **QTZ Laser Sensor**: Monitors whether heels are lowered via dual buttons (placed under the heels)
++ 🎮 **TD01 Device**: Optional enhancement device. Activates after a set period without triggering shocks, gradually increasing intensity to interfere with tiptoeing.
 
 #### 2. Parameter Settings
-Customize game difficulty:
+Game difficulty can be customized:
 
-+ **Game Duration**: Adjustable from 1-360 minutes.
-+ **Shock Intensity**: Levels 10-100.
-+ **Progressive Mode**: More violations lead to heavier punishments.
-+ **Safety Limit**: Option to allow exceeding the 30V safety limit.
-+ **Manual Start**: Option to wait for a button press on the auto_lock device to begin the game.
-+ **TD01 Delay**: Adjustable from 1-60 seconds, how long after no shock triggers before TD01 starts.
-+ **TD01 Intensity Increment**: Intensity value added every 5 seconds (1-100).
++ **Game Duration**: Adjustable from 1-360 minutes
++ **Shock Intensity**: Levels 10-100
++ **Progressive Mode**: Punishment severity increases with more violations
++ **Safety Limit**: Option to allow exceeding the 30V safety limit
++ **Manual Start**: Option to wait for a button press on the auto-lock device to start the game
++ **TD01 Delay**: Adjustable from 1-60 seconds (how long without shocks before TD01 activates)
++ **TD01 Intensity Increment**: Intensity value added every 5 seconds (1-100)
 
 ## 🎯 Specific Gameplay
 ### Core Rules
-Maintain a tiptoe standing posture, heels absolutely must not touch the ground!
+Maintain a tiptoe standing posture; heels must absolutely NOT touch the ground!
 
 #### 1. Game Start
-+ System auto-locks (if auto-lock device is present), preventing mid-game exit.
-+ If manual start mode is enabled, a button press on the auto_lock device is required to start the timer.
-+ Timer starts, requiring maintenance of tiptoe posture.
-+ QTZ sensor begins real-time monitoring of heel position.
++ System automatically locks (if auto-lock device is present), preventing mid-game quitting
++ If manual start mode is enabled, a button press on the auto-lock device is required to start the timer
++ Timer starts; tiptoe posture must be maintained
++ QTZ sensor begins real-time monitoring of heel position
 
 #### 2. Monitoring Mechanism
-+ The sensor has two button detection points (button0 and button1).
-+ Pressing down on either button with a heel = violation.
-+ System immediately triggers shock punishment.
-+ Shock only stops when both buttons are *not* pressed.
++ Sensor has two button detection points (button0 and button1)
++ Pressing down on either button with the heel = violation
++ System immediately triggers shock punishment
++ Shocks only stop when *both* buttons are released
 
 #### 3. Punishment System
-+ 🔴 **Instant Punishment**: Shock begins the moment a heel presses a button.
-+ 📈 **Progressive Intensity**: More violations cause shock intensity to automatically increase.
-+ ⏱️ **Continuous Punishment**: Shock continues as long as a button is pressed, stopping only upon complete release.
-+ 🎮 **TD01 Enhanced Punishment**: The TD01 device activates after a specified period without shock triggers, with intensity increasing every 5 seconds.
++ 🔴 **Immediate Punishment**: Shock begins the instant a heel presses a button
++ 📈 **Progressive Intensity**: Shock intensity automatically increases with more violations
++ ⏱️ **Continuous Punishment**: Shock continues as long as a button is pressed, stopping only when fully released
++ 🎮 **TD01 Enhanced Punishment**: TD01 device activates after a specified period without shocks, with intensity increasing every 5 seconds
 
 #### 4. TD01 Device Mechanism
-+ **Delayed Start**: Automatically starts after a specified number of seconds without shock triggers.
-+ **Intensity Increment**: Automatically increases by the set intensity value every 5 seconds.
-+ **Maximum Intensity**: Supports range 0-255, unaffected by safety limits.
-+ **Auto-Stop**: Automatically stops and resets when a shock is triggered.
++ **Delayed Activation**: Automatically starts after a specified number of seconds without shocks
++ **Intensity Increment**: Automatically adds the set intensity value every 5 seconds
++ **Maximum Intensity**: Supports range 0-255, unaffected by safety limits
++ **Automatic Stop**: Automatically stops and resets when a shock is triggered
 
 #### 5. Game End
-+ Automatically unlocks after persisting for the set duration.
-+ System displays a comprehensive performance report.
-+ Statistics on violation count, shock count, etc., are shown.
++ Automatically unlocks after the set time is reached
++ System displays a complete performance report
++ Statistics include violation count, shock count, etc.
 
-## 💪 Challenge Points
-+ **Physical Challenge**: Prolonged tiptoe standing tests leg muscle endurance.
-+ **Willpower Test**: Maintaining proper posture even when fatigued.
-+ **Precise Control**: Any subtle heel lowering will be detected.
-+ **Mind Game**: Staying calm and focused under the deterrent of shock.
-+ **Dual Pressure**: Must avoid shocks while also dealing with interference from the TD01 device.
+## 💪 Challenge Highlights
++ **Physical Challenge**: Prolonged tiptoe standing tests leg muscle endurance
++ **Willpower Test**: Must maintain proper posture even when fatigued
++ **Precise Control**: Any slight lowering of the heel will be detected
++ **Psychological Game**: Maintaining calm and focus under the threat of shock
++ **Dual Pressure**: Must avoid shocks while also dealing with TD01 device interference
 
 ## 🏆 Victory Conditions
 Successfully persist until the set time ends. Fewer violations indicate better performance:
 
-+ 🌟 **Perfect Performance**: 0 violations.
-+ ⭐ **Excellent Performance**: 1-2 violations.
-+ 👍 **Good Performance**: 3-5 violations.
-+ 😅 **Needs Improvement**: More than 5 violations.
++ 🌟 **Perfect Performance**: 0 violations
++ ⭐ **Excellent Performance**: 1-2 violations
++ 👍 **Good Performance**: 3-5 violations
++ 😅 **Needs Improvement**: More than 5 violations
 
 ## ⚠️ Safety Reminders
-+ Ensure good health; do not use if you have heart conditions, epilepsy, etc.
-+ Recommended to start with lower intensity and shorter durations.
-+ Stop immediately if you feel unwell during gameplay.
-+ For adults aged 18 and over only.
-+ Set shock intensity cautiously; excessively high levels may cause electrical injury. Risks are borne by the user.
-+ If enabling features that exceed safety limits, you assume all risks.
++ Ensure good health; no heart conditions, epilepsy, etc.
++ Recommended to start with lower intensity and shorter durations
++ Stop immediately if feeling unwell during gameplay
++ For adults 18 years and older only
++ Set shock intensity cautiously; excessively high levels may cause shock injury. Risk is borne by the user.
++ If enabling the "exceed safety limit" feature, risk is borne by the user.
 + Ensure a safe gaming environment; supervision is recommended.
 
 ## 🔧 Feature Highlights
 ### Manual Start Mode
-+ Shows a waiting screen after game loads.
-+ Auto-lock device locks first.
-+ Requires a button press on the auto_lock device to start the game timer.
-+ Suitable for scenarios requiring preparation time.
++ Displays a waiting screen after game loads
++ Auto-lock device locks first
++ Requires a button press on the auto-lock device to start the game timer
++ Suitable for scenarios requiring preparation time
 
-### Real-Time Shock Mechanism
-+ Continuous shock begins immediately when *any* button is pressed.
-+ Shock stops immediately when *all* buttons are released.
-+ Provides the most direct feedback mechanism.
+### Real-time Shock Mechanism
++ Continuous shock begins immediately when any button is pressed
++ Shock stops immediately when all buttons are released
++ Provides the most direct feedback mechanism
 
 ### TD01 Enhancement System
-+ Optional extra challenge device.
-+ Increases difficulty when performance is good.
-+ Gradually increasing intensity adds tension to the game.
-+ Supports independent intensity control.
++ Optional additional challenge device
++ Increases difficulty when performance is good
++ Gradually increasing intensity adds game tension
++ Supports independent intensity control
 
 ---
 
-**Disclaimer**: This game involves shock devices. Please fully understand the associated risks before use. The developer is not responsible for any damages resulting from the use of this game. Please use safely under professional guidance.
+**Disclaimer**: This game involves shock devices. Please fully understand the associated risks before use. The developer is not responsible for any damage caused by using this game. Please use safely under professional guidance.
