--- a/i18n/en/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
@@ -6,12 +6,12 @@
 # Product Features
 1. Wireless Control
 2. Python Control
-3. Supports USB Vibrators
+3. Supports USB Vibrator
 4. Large Capacity Battery
 
-Switch Direction: Away from the charging port is ON, otherwise it is OFF.
+Switch Direction: Away from the charging port is ON, otherwise OFF.
 
 # Usage Tutorial
-1. Using Python to control the vibrator to activate every 2 seconds
+1. Using Python to control the vibrator, activating it every 2 seconds.
 
 [Control Vibrator with Python](../玩法说明/用python控制跳蛋.md)
