--- a/i18n/en/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
@@ -2,17 +2,17 @@
 
 Purchase link: [https://item.taobao.com/item.htm?id=892309919507](https://item.taobao.com/item.htm?id=892309919507)
 
-Notes:  
-1**. The device defaults to safe mode, where the voltage does not exceed 36V. If you need to increase it, please set the device's safe property to 0. In this mode, the maximum voltage limit is 80V. However, note that in this mode, you must pay attention to safety on your own. You are responsible for any issues that may arise.**
+Important Notes:
+1**. The device defaults to safe mode, where the voltage does not exceed 36V. If you need to increase it, please set the device's safe attribute to 0. In this mode, the maximum voltage is limited to 80V. However, please be aware that you must pay attention to safety in this mode. You are responsible for any consequences if issues arise.**
 
-2. **Please ensure the plug is inserted fully; otherwise, there will be no output.**
+2. **Please ensure the plug is fully inserted; otherwise, there will be no output.**
 
 Related Usage Scenarios
 
 1. Memorizing Vocabulary
 
-[Explanation of the Studious Vocabulary Memorization Component Gameplay](../玩法说明/锥刺股背单词玩法说明.md)
+[Explanation of the "Studying with a Goad" Vocabulary Memorization Component](../玩法说明/锥刺股背单词玩法说明.md)
 
 Product Introduction
 
-It can connect to a computer via Wi-Fi, and the electric pulse generation can be controlled through programs on the computer.
+It can connect to a computer via WiFi, allowing the generation of electric pulses to be controlled by a program on the computer.
