--- a/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
@@ -1,17 +1,17 @@
-﻿# Instrucciones para Flashear Firmware de Hardware
+# Instrucciones para la grabación de firmware de hardware
 
-1.  Instalar controladores (drivers)
-    1.  Controlador para el chip de puerto serie CH340: [https://www.wch.cn/downloads/CH341SER_EXE.html](https://www.wch.cn/downloads/CH341SER_EXE.html)
-    2.  Controlador para el chip de puerto serie CH343: [https://www.wch.cn/downloads/CH343SER_EXE.html](https://www.wch.cn/downloads/CH343SER_EXE.html)
-    3.  Después de descargar, ejecute el archivo directamente.
-2.  Descargar la herramienta de flash (flash tool)
-    1.  [https://dl.espressif.com/public/flash_download_tool.zip](https://dl.espressif.com/public/flash_download_tool.zip)
-    2.  Descomprima y ejecute.
-    3.  Instrucciones de uso:
-    4.  [https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5](https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5)
-    5.  Nota: En el paso 3 de las instrucciones, es necesario modificar el puerto COM; las demás partes no requieren cambios.
-3.  Descargar el firmware
-    1.  [https://github.com/jiandanzhineng/hardware/releases/latest](https://github.com/jiandanzhineng/hardware/releases/latest)
-    2.  ![1768981515944-c052b509-6ae3-41d5-b212-367666940cfd.png](./img/IpJdu5RTAcw-LC13/1768981515944-c052b509-6ae3-41d5-b212-367666940cfd-449925.png)
-    3.  Descargue el firmware según el tipo de dispositivo (descargue el firmware que incluya la palabra "merged"): Electroválvula-DIANJI, Sensor de presión-QIYA, Controlador de motor de eje descentrado-TD01, Sensor de distancia-QTZ
-    4.  Utilice la herramienta para flashearlo en la posición 0x0 del dispositivo.
+1. Instalar controladores
+    1. Controlador del chip de puerto serie CH340: [https://www.wch.cn/downloads/CH341SER_EXE.html](https://www.wch.cn/downloads/CH341SER_EXE.html)
+    2. Controlador del chip de puerto serie CH343: [https://www.wch.cn/downloads/CH343SER_EXE.html](https://www.wch.cn/downloads/CH343SER_EXE.html)
+    3. Ejecutar directamente después de descargar
+2. Descargar la herramienta de grabación (flash tool)
+    1. [https://dl.espressif.com/public/flash_download_tool.zip](https://dl.espressif.com/public/flash_download_tool.zip)
+    2. Descomprimir y ejecutar
+    3. Instrucciones de uso:
+    4. [https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5](https://docs.espressif.com/projects/esp-test-tools/zh_CN/latest/esp32/production_stage/tools/flash_download_tool.html#id5)
+    5. Nota: En el tercer paso es necesario modificar el puerto COM; las demás partes no requieren cambios.
+3. Descargar el firmware
+    1. [https://github.com/jiandanzhineng/hardware/releases/latest](https://github.com/jiandanzhineng/hardware/releases/latest)
+    2. ![1768981515944-c052b509-6ae3-41d5-b212-367666940cfd.png](./img/IpJdu5RTAcw-LC13/1768981515944-c052b509-6ae3-41d5-b212-367666940cfd-449925.png)
+    3. Descargar el firmware según el tipo de dispositivo (descargar el firmware que contenga la palabra "merged"): DIANJI - Motor eléctrico, QIYA - Sensor de presión, TD01 - Controlador de motor de eje descentrado, QTZ - Sensor de distancia
+    4. Utilizar la herramienta para grabar el firmware en la posición 0x0 del dispositivo.
