--- a/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/_category_.json
+++ b/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Conexión de dispositivo a WiFi (configuración de red)",
+  "label": "Conexión del dispositivo a WiFi (configuración de red)",
   "position": 1,
   "collapsed": false
 }
