--- a/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
@@ -1,15 +1,15 @@
-# Configuración de red a través del cliente de computadora (requiere que la computadora admita Bluetooth)
+# Configuración de red mediante cliente de PC (requiere que la PC tenga Bluetooth)
 
-<font>Nota: Este método aún está en pruebas y puede ser inestable. Si falla, intente finalizar y reiniciar la configuración de red o utilice otro método.</font>
+<font>Nota: Este método aún está en prueba y puede ser inestable. Si falla, intente finalizar la configuración de red y comenzar de nuevo, o utilice otro método.</font>
 
-**<font>Nota: Si desea utilizar la red WiFi predeterminada, no configure la red. El nombre de la red WiFi predeterminada es easysmart y la contraseña es 11111111. El dispositivo se conectará automáticamente a la red WiFi predeterminada.</font>**
+**<font>Nota: Si desea utilizar la red wifi predeterminada, no configure la red. La red wifi predeterminada es: nombre easysmart, contraseña 11111111. El dispositivo se conectará automáticamente a la red wifi predeterminada.</font>**
 
 ![1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4.png](./img/hURz820DTNcJYUCH/1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4-096925.png)
 
-1. Abra el cliente y haga clic en **Gestión de dispositivos** -> **Configuración de red del dispositivo**.
+1. Abra el cliente, haga clic en Gestión de dispositivos -> Configuración de red del dispositivo.
 
 ![1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed.png](./img/hURz820DTNcJYUCH/1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed-155975.png)
 
-2. Ingrese el nombre de la red WiFi y la contraseña (asegúrese de no cometer errores, de lo contrario, la conexión a Internet fallará incluso después de una configuración exitosa).
-3. Haga clic en **Modificar configuración**.
-4. Haga clic en **Iniciar configuración de red** para comenzar el proceso.
+2. Ingrese el nombre de la red wifi y la contraseña (tenga cuidado de no ingresar datos incorrectos, de lo contrario, aunque la configuración de red sea exitosa, no podrá conectarse a Internet).
+3. Haga clic en Modificar configuración.
+4. Haga clic en Iniciar configuración de red para comenzar el proceso.
