--- a/i18n/es/docusaurus-plugin-content-docs/current/已知问题.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/已知问题.md
@@ -2,10 +2,10 @@
 sidebar_position: 99
 ---
 
-# Problemas conocidos
+# Problemas Conocidos
 
-1. La configuración de red del dispositivo puede fallar en algunos routers. En estos casos, se puede crear un punto de acceso Wi-Fi con el teléfono móvil.
-2. Al recibir el dispositivo, si la configuración de red falla o el dispositivo no se conecta después de configurarlo, puede deberse a falta de batería. Prueba a cargarlo o mantenerlo conectado a la corriente y reiniciarlo.
-3. Asegúrate de iniciar mDNS solo cuando las condiciones de red sean estables; de lo contrario, podría causar problemas en la vinculación del dominio mDNS (por ejemplo, en un entorno de punto de acceso móvil, conecta primero el punto de acceso antes de iniciar mDNS).
-4. Si el botón de configuración de red aparece en gris después de conectar el teléfono al dispositivo, intenta reiniciar el teléfono.
-5. En el modo de conexión por punto de acceso, debido a las limitaciones de la calidad de la tarjeta de red, pueden ocurrir retrasos breves en las acciones de vez en cuando.
+1. En algunos routers, la configuración de red del dispositivo puede fallar. En ese caso, se puede utilizar el teléfono móvil para crear una red Wi-Fi.
+2. Si el dispositivo recién recibido falla en la configuración de red o no se conecta después de configurarlo, puede deberse a falta de batería. Se recomienda cargarlo o mantenerlo conectado a la corriente, y luego reiniciarlo.
+3. Asegúrese de iniciar mdns solo en condiciones de red estables; de lo contrario, podría causar anomalías en la vinculación de nombres de dominio mdns (por ejemplo, en entornos de hotspot móvil, primero conéctese al hotspot y luego inicie mdns).
+4. Si el botón de configuración de red aparece en gris después de conectar el teléfono al dispositivo, intente reiniciar el teléfono.
+5. En modo de conexión por hotspot, debido a la calidad de la tarjeta de red, pueden ocurrir retrasos breves en las acciones periódicamente.
