--- a/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/俯卧撑（大概）检测训练游戏.md
@@ -1,69 +1,69 @@
-# Juego de Entrenamiento con Detección de (probablemente) Flexiones
+# Juego de Entrenamiento con Detección (aproximada) de Flexiones
 
-Un juego de entrenamiento de flexiones basado en sensor de distancia, que detecta la realización de los movimientos de flexión a través del sensor de distancia QTZ, combinado con mecanismos de incentivo y castigo en el entrenamiento mediante un candado automático, dispositivo de electrochoque y dispositivo de vibrador.
+Un juego de entrenamiento de flexiones basado en sensor de distancia, que detecta la realización de movimientos de flexión mediante el sensor de distancia QTZ, combinado con dispositivos de bloqueo automático, electrochoque y vibrador para mecanismos de incentivo y castigo en el entrenamiento.
 
-Se puede agregar un pequeño palo en la boca para crear una nueva modalidad = =
+Se puede añadir un palito pequeño en la boca~ para convertirlo en una nueva modalidad de juego = =
 
 Enlace de compra [Enlace de compra en Taobao](https://item.taobao.com/item.htm?id=964389698138)
 
-## Descripción del Juego
+## Descripción General del Juego
 ### Objetivo del Juego
-+ Completar la cantidad especificada de flexiones dentro del tiempo establecido
-+ Mantener una postura estándar para las flexiones
-+ Mejorar la efectividad del entrenamiento y la concentración a través de la retroalimentación de los dispositivos
++ Completar un número específico de flexiones dentro del tiempo establecido.
++ Mantener una postura estándar para las flexiones.
++ Mejorar la efectividad del entrenamiento y la concentración mediante la retroalimentación de los dispositivos.
 
 ### Mecánica del Juego
-1. **Inicio del juego**: El dispositivo de candado automático se bloquea, comienza el cronómetro y la detección de movimientos
-2. **Detección de movimientos**: El sensor de distancia QTZ monitorea en tiempo real los cambios en la altura del cuerpo
-3. **Determinación de completado**: Cuando el cuerpo desciende por debajo de la distancia establecida se considera "abajo", y cuando asciende por encima de la distancia establecida se considera "arriba"
-4. **Mecanismo de castigo**: La inactividad prolongada desencadena un castigo de electrochoque con intensidad y duración aleatorias
-5. **Interferencia de recompensa**: Después de completar una cantidad específica de manera continua, cada flexión completada tiene una probabilidad de desencadenar una interferencia del vibrador
-6. **Reinicio de estado**: Después de recibir un castigo, el conteo de completados consecutivos se reinicia a cero, y se vuelve a comenzar la determinación de recompensa
-7. **Fin del juego**: Se desbloquea automáticamente cuando se alcanza el número objetivo o al finalizar el tiempo
+1. **Inicio del juego**: El dispositivo de bloqueo automático se activa, comenzando el conteo del tiempo y la detección de movimientos.
+2. **Detección de movimiento**: El sensor de distancia QTZ monitorea en tiempo real los cambios en la altura del cuerpo.
+3. **Determinación de completado**: Cuando el cuerpo desciende por debajo de una distancia establecida se considera "abajo", y cuando asciende por encima de una distancia establecida se considera "arriba".
+4. **Mecanismo de castigo**: La inactividad prolongada desencadena un castigo de electrochoque con intensidad y duración aleatorias.
+5. **Interferencia como recompensa**: Después de completar un número específico de forma consecutiva, cada flexión completada tiene una probabilidad de desencadenar una interferencia con el vibrador.
+6. **Reinicio de estado**: Después de recibir un castigo, el conteo de completados consecutivos se reinicia a cero, comenzando de nuevo la determinación de recompensa.
+7. **Fin del juego**: Se desbloquea automáticamente al alcanzar el número objetivo o al finalizar el tiempo.
 
 ## Requisitos del Equipo
 ### Configuración del Equipo
-| Tipo de Equipo | ID Lógico | Nombre del Equipo | ¿Es necesario? | Función |
+| Tipo de Equipo | ID Lógico | Nombre del Equipo | ¿Es Obligatorio? | Función |
 | --- | --- | --- | --- | --- |
-| QTZ | distance_sensor | Sensor de distancia QTZ | Sí | Detecta cambios en la altura del cuerpo, determina el movimiento de flexión |
-| ZIDONGSUO | auto_lock | Candado automático | No | Se bloquea al inicio del juego, se desbloquea al completar o al superar el tiempo |
-| DIANJI | shock_device | Dispositivo de electrochoque | No | Ejecuta el castigo cuando no hay movimiento durante mucho tiempo |
-| TD01 | vibrator_device | Dispositivo vibrador | No | Interferencia aleatoria después de completar movimientos de manera consecutiva |
+| QTZ | distance_sensor | Sensor de distancia QTZ | Sí | Detecta cambios en la altura del cuerpo, determina el movimiento de flexión. |
+| ZIDONGSUO | auto_lock | Bloqueo automático | No | Se bloquea al inicio del juego, se desbloquea al completar o al superar el tiempo. |
+| DIANJI | shock_device | Dispositivo de electrochoque | No | Ejecuta el castigo cuando hay inactividad prolongada. |
+| TD01 | vibrator_device | Dispositivo vibrador | No | Interferencia aleatoria después de completar movimientos de forma consecutiva. |
 
 ## Configuración de Parámetros del Juego
 ### Parámetros Básicos
-| Nombre del Parámetro | Tipo | Rango | Valor Predeterminado | Explicación |
+| Nombre del Parámetro | Tipo | Rango | Valor por Defecto | Descripción |
 | --- | --- | --- | --- | --- |
-| duration | Número | 1-240 minutos | 15 minutos | Duración del juego |
-| targetCount | Número | 1-2000 repeticiones | 30 repeticiones | Número objetivo de flexiones completadas |
-| downThreshold | Número | 5-30 cm | 15 cm | Se considera "abajo" cuando el cuerpo desciende por debajo de esta distancia |
-| upThreshold | Número | 20-50 cm | 35 cm | Se considera "arriba" cuando el cuerpo asciende por encima de esta distancia |
+| duration | Número | 1-240 minutos | 15 minutos | Duración del juego. |
+| targetCount | Número | 1-2000 repeticiones | 30 repeticiones | Número objetivo de flexiones completadas. |
+| downThreshold | Número | 5-30 cm | 15 cm | Distancia por debajo de la cual el cuerpo se considera "abajo". |
+| upThreshold | Número | 20-50 cm | 35 cm | Distancia por encima de la cual el cuerpo se considera "arriba". |
 
 ### Parámetros del Mecanismo de Castigo
-| Nombre del Parámetro | Tipo | Rango | Valor Predeterminado | Explicación |
+| Nombre del Parámetro | Tipo | Rango | Valor por Defecto | Descripción |
 | --- | --- | --- | --- | --- |
-| idleTimeLimit | Número | 10-120 segundos | 30 segundos | Tiempo de inactividad que desencadena el castigo |
-| shockIntensity | Número | 10-100V | 15V | Valor base de la intensidad del electrochoque |
-| shockDuration | Número | 1-10 segundos | 3 segundos | Valor base de la duración del electrochoque |
-| randomIntensityRange | Número | 0-50V | 10V | Rango aleatorio de variación de la intensidad del electrochoque (± este valor) |
-| randomDurationRange | Número | 0-5 segundos | 1 segundo | Rango aleatorio de variación de la duración (± este valor) |
+| idleTimeLimit | Número | 10-120 segundos | 30 segundos | Tiempo de inactividad máximo antes de desencadenar castigo. |
+| shockIntensity | Número | 10-100V | 15V | Valor base de la intensidad del electrochoque. |
+| shockDuration | Número | 1-10 segundos | 3 segundos | Valor base de la duración del electrochoque. |
+| randomIntensityRange | Número | 0-50V | 10V | Amplitud aleatoria de la intensidad del electrochoque (± este valor). |
+| randomDurationRange | Número | 0-5 segundos | 1 segundo | Amplitud aleatoria de la duración (± este valor). |
 
-### Parámetros de Interferencia de Recompensa
-| Nombre del Parámetro | Tipo | Rango | Valor Predeterminado | Explicación |
+### Parámetros de Interferencia como Recompensa
+| Nombre del Parámetro | Tipo | Rango | Valor por Defecto | Descripción |
 | --- | --- | --- | --- | --- |
-| rewardTriggerCount | Número | 3-20 repeticiones | 5 repeticiones | Número de repeticiones completadas consecutivamente para comenzar la determinación de activación de recompensa |
-| rewardTriggerProbability | Número | 0-100% | 30% | Probabilidad de activación de interferencia por cada repetición completada después de cumplir la condición de activación |
-| vibratorIntensity | Número | 1-255 | 100 | Intensidad del vibrador |
-| vibratorDuration | Número | 5-60 segundos | 15 segundos | Tiempo de funcionamiento del vibrador |
+| rewardTriggerCount | Número | 3-20 repeticiones | 5 repeticiones | Número de completados consecutivos necesarios para comenzar la determinación de activación de recompensa. |
+| rewardTriggerProbability | Número | 0-100% | 30% | Probabilidad de activación de interferencia por cada flexión completada una vez alcanzada la condición de activación. |
+| vibratorIntensity | Número | 1-255 | 100 | Intensidad del vibrador. |
+| vibratorDuration | Número | 5-60 segundos | 15 segundos | Tiempo de trabajo del vibrador. |
 
 ## Explicación de la Interfaz del Juego
 ### Elementos de la Interfaz Principal
-+ **Tiempo restante**: Muestra el tiempo restante del juego
-+ **Progreso de completado**: Cantidad actual completada / cantidad objetivo
-+ **Estado del movimiento**: Muestra la fase actual del movimiento (abajo/arriba)
-+ **Estado de bloqueo**: Muestra el estado actual del candado automático
-+ **Estado del equipo**: Muestra el estado de funcionamiento de cada dispositivo
++ **Tiempo restante**: Muestra el tiempo restante del juego.
++ **Progreso de completado**: Número actual completado / Número objetivo.
++ **Estado del movimiento**: Muestra la fase actual del movimiento (abajo/arriba).
++ **Estado de bloqueo**: Muestra el estado actual del bloqueo automático.
++ **Estado del equipo**: Muestra el estado operativo de cada dispositivo.
 
 ## Información de Desarrollo
 ### Historial de Versiones
-+ v1.0.0: Implementación de la funcionalidad básica
++ v1.0.0: Implementación de la funcionalidad básica.
