--- a/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
@@ -1,24 +1,24 @@
-# Modo de juego de Entrenamiento de Elevación Anal
+# Modo de juego de entrenamiento de elevación pélvica
 
-# Introducción al modo de juego
-+ El entrenamiento de elevación anal alterna entre la "fase de relajación" y la "fase de elevación anal"
-+ El objetivo es completar la mayor cantidad de "elevaciones anales exitosas" posible dentro del tiempo establecido
-+ El éxito o el fracaso se indican visualmente en la interfaz; el fracaso activa una descarga eléctrica (si está conectado y habilitado)
+# Introducción al juego
++ El entrenamiento de elevación pélvica se realiza alternando las fases de "relajación" y "elevación pélvica"
++ El objetivo es completar la mayor cantidad de "elevaciones pélvicas exitosas" posible dentro del tiempo establecido
++ El éxito o el fracaso se indican visualmente en la interfaz; el fracaso activará una descarga eléctrica (si está conectado y habilitado)
 
 ## Descarga del software y preparación
-Teléfono Android: [Cliente para móvil (se recomienda utilizar la WiFi por defecto, no configurar la red)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
+Teléfono Android: [Cliente para móvil (se recomienda usar la WiFi predeterminada, no configurar la red)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
 
-Ordenador con Windows: [Guía de uso del nuevo cliente para ordenador](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Computadora con Windows: [Guía de uso del nuevo cliente para PC](../PC版控制客户端.md)
 
-# Equipo y preparación
-+ Equipo necesario: `Sensor de presión de aire (QIYA)`
-+ Equipo opcional: `Dispositivo de descarga eléctrica (DIANJI)`, `Cerradura automática (ZIDONGSUO)`
+# Dispositivos y preparación
++ Dispositivo obligatorio: `Sensor de presión de aire (QIYA)`
++ Dispositivos opcionales: `Dispositivo de descarga eléctrica (DIANJI)`, `Cerradura automática (ZIDONGSUO)`
 + La cerradura se activa automáticamente al inicio y se desbloquea al finalizar (si está conectada la cerradura automática)
 
-## Ensamblaje del equipo
-Desconecta la pera de inflado del tapón anal inflable y conéctala a la manguera de goma del sensor de presión de aire. Luego, conecta la manguera de goma del tapón anal al extremo T del sensor de presión de aire.
+## Ensamblaje del dispositivo
+Desconecta la pera de inflado del tapón anal inflable y conéctala al tubo de goma del sensor de presión de aire. Luego, conecta el tubo de goma del tapón anal al conector en T del sensor de presión de aire.
 
-1. Aspecto del tapón anal al recibirlo (el diseño del nuevo tapón anal ha cambiado, tiene un mejor sellado y es similar al de abajo)
+1. Aspecto del tapón anal al recibirlo (el diseño del nuevo tapón anal ha cambiado, tiene un mejor sellado y es similar al siguiente)
 
 ![1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a.jpeg](./img/9EvIrzfBJGTcxowq/1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a-569828.jpeg)
 
@@ -30,7 +30,7 @@ Desconecta la pera de inflado del tapón anal inflable y conéctala a la manguer
 
 ![1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94.jpeg](./img/9EvIrzfBJGTcxowq/1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94-473186.jpeg)
 
-4. Aspecto del producto terminado
+4. Aspecto final del conjunto
 
 ![1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6.jpeg](./img/9EvIrzfBJGTcxowq/1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6-408833.jpeg)
 
@@ -38,7 +38,7 @@ Desconecta la pera de inflado del tapón anal inflable y conéctala a la manguer
 
 ![1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e.jpeg](./img/9EvIrzfBJGTcxowq/1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e-647342.jpeg)![1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0.jpeg](./img/9EvIrzfBJGTcxowq/1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0-236824.jpeg)
 
-Aprieta este abrazadera en la conexión para reducir la velocidad de fuga de presión.
+Apretar esta abrazadera en la conexión puede reducir la velocidad de fuga de presión.
 
 Enlace de compra de la abrazadera: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
 
@@ -48,56 +48,56 @@ Enlace de compra de la abrazadera: [https://item.taobao.com/item.htm?id=72482723
 ![1764168001256-dac8a8ce-6904-47e8-89a8-53c7035ca08f.png](./img/9EvIrzfBJGTcxowq/1764168001256-dac8a8ce-6904-47e8-89a8-53c7035ca08f-271093.png)
 
 # Explicación de parámetros
-+ `Duración (minutos)`: Duración total de la partida.
-+ `Objetivo de número de elevaciones`: Número esperado de elevaciones exitosas, utilizado para mostrar el progreso general.
-+ `Grado de cambio de presión (kPa)`: Umbral de incremento de presión necesario durante la fase de elevación anal (en relación a la presión mínima de la fase de relajación).
-+ `Intensidad de descarga (V)`: Intensidad de la descarga eléctrica al fallar.
-+ `Duración de la descarga (segundos)`: Tiempo que dura la descarga eléctrica al fallar.
-+ `Tiempo de ciclo individual (segundos)`: Duración de cada fase, por defecto 10 segundos (relajación 10s → elevación anal 10s → ciclo).
++ `Duración (minutos)`: Duración total de la sesión de juego.
++ `Objetivo de repeticiones`: Número de elevaciones exitosas que se espera completar, utilizado para mostrar el progreso general.
++ `Cambio de presión (kPa)`: Umbral de incremento de presión que debe alcanzarse en la fase de elevación pélvica (en relación a la presión mínima de la fase de relajación).
++ `Intensidad de descarga (V)`: Intensidad de la descarga eléctrica en caso de fallo.
++ `Duración de la descarga (segundos)`: Tiempo que dura la descarga eléctrica en caso de fallo.
++ `Tiempo por ciclo (segundos)`: Duración de cada fase. Por defecto es 10 segundos (relajación 10s → elevación pélvica 10s → ciclo).
 
-# Flujo de juego
+# Flujo del juego
 + Fase de relajación
-    - Relájate y respira naturalmente; el sistema registrará la "presión mínima" de esta fase como referencia.
-    - Al finalizar la cuenta regresiva, se pasa a la fase de elevación anal.
-+ Fase de elevación anal
-    - Debes aumentar la presión hasta alcanzar "presión mínima + grado de cambio de presión" dentro del tiempo de esta fase.
-    - Alcanzar el objetivo se considera "Logrado", pero aún debes esperar a que termine la cuenta regresiva de esta fase para pasar a la siguiente ronda.
-    - Si no se alcanza el objetivo antes de que termine la fase, se considera "Desafío fallido · Iniciando descarga eléctrica" (si el dispositivo de descarga está disponible).
+    - Relájate y respira naturalmente. El sistema registrará la "presión mínima" de esta fase como referencia.
+    - Al terminar la cuenta regresiva, se pasa a la fase de elevación pélvica.
++ Fase de elevación pélvica
+    - Debes aumentar la presión hasta alcanzar "presión mínima + cambio de presión" dentro del tiempo de esta fase.
+    - Alcanzar el objetivo se considera "logrado", pero aún debes esperar a que termine la cuenta regresiva de la fase para pasar a la siguiente ronda.
+    - Si no se alcanza el objetivo antes de que termine la fase, se considera "Desafío fallido · Iniciando descarga" (si el dispositivo de descarga está disponible).
 + Alternancia de fases
-    - Cada ronda sigue el ciclo "relajación → elevación anal → relajación → …" hasta que se acabe el tiempo o se alcance el número objetivo de veces.
+    - Cada ronda sigue el ciclo "relajación → elevación pélvica → relajación → ..." hasta que se acabe el tiempo o se alcance el número objetivo de repeticiones.
 
-# Indicaciones de la interfaz
-+ En la parte superior, texto grande muestra la fase actual (Fase de relajación/Fase de elevación anal) y el tiempo restante en esta fase.
+# Indicaciones en la interfaz
++ En la parte superior, texto grande muestra la fase actual (Fase de relajación / Fase de elevación pélvica) y el tiempo restante en esta fase.
 + Progreso general
-    - Barra de progreso por número de veces: Veces completadas / Objetivo de veces.
-    - Barra de progreso por tiempo: Tiempo transcurrido / Tiempo total.
+    - Barra de progreso por repeticiones: Número de repeticiones completadas / Objetivo de repeticiones.
+    - Barra de progreso por tiempo: Tiempo transcurrido / Duración total.
 + Presión y objetivo
     - Presión actual (kPa)
-    - Presión mínima durante la fase de relajación (valor de referencia)
-    - Presión objetivo para la elevación anal (presión mínima + grado de cambio de presión)
+    - Presión mínima durante la relajación (valor de referencia)
+    - Presión objetivo para la elevación pélvica (presión mínima + cambio de presión)
 + Indicación de éxito/fracaso
-    - Éxito: Muestra una cápsula verde "Logrado" después del número.
-    - Fracaso: Muestra una cápsula roja "Desafío fallido · Iniciando descarga eléctrica" después del número.
+    - Éxito: Se muestra una cápsula verde "Logrado" después del número.
+    - Fracaso: Se muestra una cápsula roja "Desafío fallido · Iniciando descarga" después del número.
 + Operaciones y registro
-    - Botones: Pausar, descarga eléctrica manual.
+    - Botones: Pausar, Descarga manual.
     - Registro: Muestra información reciente y mensajes del sistema.
 
 **Finalización y estadísticas**
 
-+ La partida termina al alcanzar la duración establecida o al lograr el número objetivo de elevaciones exitosas.
++ La sesión termina al alcanzar la duración establecida o cuando el número de éxitos alcanza el objetivo.
 + Se desbloquea automáticamente al finalizar (si está conectada la cerradura automática).
-+ La interfaz muestra el número acumulado de éxitos y descargas eléctricas, entre otros datos.
++ La interfaz muestra el número acumulado de éxitos, descargas eléctricas, etc.
 
 **Recomendaciones de uso**
 
-+ Para usuarios primerizos, se recomienda establecer un "grado de cambio de presión" bajo para familiarizarse con el ritmo.
-+ Si se conecta un dispositivo de descarga eléctrica, comenzar con una intensidad baja y ajustar gradualmente.
-+ Mantener una respiración estable; durante la fase de elevación anal, concentrarse en aumentar la presión para alcanzar el objetivo.
++ Para usuarios primerizos, se recomienda establecer un valor bajo para "Cambio de presión" para familiarizarse con el ritmo.
++ Si se conecta un dispositivo de descarga eléctrica, comenzar con baja intensidad y ajustar gradualmente.
++ Mantener una respiración estable y concentrarse en aumentar la presión hasta el objetivo durante la fase de elevación pélvica.
 
-**Guía rápida de inicio**
+**Guía rápida**
 
-+ Conectar el sensor de presión de aire (conectar opcionalmente el dispositivo de descarga y la cerradura automática).
++ Conectar el sensor de presión de aire (opcionalmente conectar dispositivo de descarga, cerradura automática).
 + Configurar los parámetros y comenzar.
-+ En la fase de relajación, no esforzarse, solo esperar la cuenta regresiva; en la fase de elevación anal, esforzarse para aumentar la presión hasta el objetivo.
-+ Al ver "Logrado", mantenerlo hasta que termine la fase; el fracaso mostrará un mensaje y activará la descarga.
-+ Repetir el ciclo hasta el final, revisar las estadísticas y barras de progreso para conocer el desempeño.
++ En la fase de relajación, no hacer fuerza, esperar la cuenta regresiva. En la fase de elevación pélvica, hacer fuerza para alcanzar el objetivo.
++ Al ver "Logrado", mantener hasta el final de la fase. En caso de fallo, se indicará y se aplicará descarga.
++ Repetir el ciclo hasta el final. Consultar las estadísticas y barras de progreso para conocer los resultados.
