--- a/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/边缘控制（寸止）玩法.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/边缘控制（寸止）玩法.md
@@ -1,8 +1,8 @@
 # Juego de Control del Borde (Edging)
 
-Un juego de entrenamiento de edging basado en un sensor de presión de aire que detecta cambios en la presión del esfínter, combinado con un controlador de motor de eje descentrado y un dispositivo de electroestimulación para un control inteligente de la estimulación.
+Un juego de entrenamiento de edging basado en un sensor de presión de aire, que detecta cambios en la presión del esfínter y combina un controlador de motor excéntrico y un dispositivo de electrochoque para un control de estimulación inteligente.
 
-Enlace para comprar el kit de juego:
+Enlace de compra del kit de juego:
 
 [https://item.taobao.com/item.htm?id=1017049175869](https://item.taobao.com/item.htm?id=1017049175869)
 
@@ -11,21 +11,21 @@ Enlace para comprar el kit de juego:
 
 Tutorial original en Yuque: https://www.yuque.com/easysmart/easysmart/oe8gsvyhtflb9pqt
 
-# Tutoriales relacionados con la versión de PC:
+# Tutoriales relacionados con la versión para PC:
 
-Descarga del cliente: [Guía de uso del nuevo cliente de PC](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Descarga del cliente: [Guía de uso del nuevo cliente para PC](../PC版控制客户端.md)
 
-Tutorial en video: [【Tutorial de juego】Revelación del kit de Edging: 3 pasos para alcanzar la experiencia máxima, video te enseña a conquistarlo_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1WXWpzUEoW/?spm_id_from=333.1007.top_right_bar_window_dynamic.content.click)
+Tutorial en video: [【Tutorial de juego】Kit de Edging revelado: 3 pasos para alcanzar la experiencia máxima, video te enseña a dominarlo_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1WXWpzUEoW/?spm_id_from=333.1007.top_right_bar_window_dynamic.content.click)
 
-Se recomienda usar un punto de acceso (hotspot) o el WiFi predeterminado; esta opción no requiere configurar la red. Si se desea usar la opción con router, antes de comenzar a jugar, se debe realizar la **<font>configuración de red</font>** del dispositivo. Consulta la sección de configuración de red en el índice de la izquierda.
+Se recomienda usar hotspot y la red wifi predeterminada; esta solución no requiere configuración de red. Si deseas usar la solución con router, antes de comenzar a jugar, asegúrate de **<font>configurar la red</font>** del dispositivo. Consulta la sección de configuración de red en el índice de la izquierda.
 
 # Precauciones
-1.  El tapón anal inflable ha sido mejorado para tener mayor estanqueidad y reducir fugas de aire. Su aspecto es diferente al mostrado abajo.
-2.  Durante el juego, la presión del aire **<font>no debe ser demasiado alta</font>** (esto puede causar fugas). Generalmente, entre 22 y 24 está bien, siempre que haya cambios al apretar.
-3.  Al insertarlo, se puede aplicar un poco de presión para que no esté demasiado blando y pueda ser difícil de introducir.
+1.  El tapón anal inflable ha sido mejorado, es más hermético y reduce las fugas de aire. Su apariencia es diferente a la que se muestra a continuación.
+2.  Durante el juego, la presión del aire **<font>no debe ser demasiado alta</font>** (podría causar fugas). Generalmente, entre 22-24 kPa está bien, siempre que haya cambios al apretar.
+3.  Al insertarlo, puedes inflarlo un poco, de lo contrario, si está demasiado blando, podría no entrar.
 
-# Ensamblaje del Kit (lectura obligatoria)
-Desconecta la pera de inflado del tapón anal inflable y conéctala al tubo del sensor de presión de aire. Luego, conecta el tubo del tapón anal inflable al conector en T del sensor de presión de aire.
+# Ensamblaje del kit (lectura obligatoria)
+Desconecta la pera de inflado del tapón anal inflable y conéctala al tubo del sensor de presión. Luego, conecta el tubo del tapón anal al conector en T del sensor de presión.
 
 1.  Aspecto del tapón anal al recibirlo
 
@@ -39,23 +39,23 @@ Desconecta la pera de inflado del tapón anal inflable y conéctala al tubo del 
 
 ![1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94.jpeg](./img/gSDlRL7nWPTFLsZ5/1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94-303989.jpeg)
 
-4.  Aspecto del producto terminado
+4.  Aspecto final
 
 ![1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6.jpeg](./img/gSDlRL7nWPTFLsZ5/1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6-900393.jpeg)
 
-5.  Refuerzo opcional si la fuga de presión es rápida
+5.  Refuerzo opcional si la pérdida de presión es rápida
 
 ![1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e.jpeg](./img/gSDlRL7nWPTFLsZ5/1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e-938338.jpeg)![1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0.jpeg](./img/gSDlRL7nWPTFLsZ5/1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0-507329.jpeg)
 
-Aprieta esta abrazadera en la conexión para reducir la velocidad de fuga de presión.
+Aprieta este collarín en la conexión para reducir la velocidad de pérdida de presión.
 
-Enlace de compra de la abrazadera: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
+Enlace de compra del collarín: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
 
-### Mecánica del Juego
-1.  **Monitorización de presión**: El sensor de presión de aire detecta en tiempo real los cambios en la presión del esfínter.
-2.  **Ajuste inteligente**: Reduce la estimulación cuando la presión es alta y la incrementa cuando es baja.
-3.  **Advertencia por electroestimulación**: Activa una electroestimulación cuando la presión supera un valor crítico para que el usuario recupere la lucidez.
-4.  **Inicio retardado**: Cuando la presión es baja, la estimulación comienza lentamente tras un período de retraso.
+### Mecánica del juego
+1.  **Monitoreo de presión**: El sensor de presión detecta en tiempo real los cambios en la presión del esfínter.
+2.  **Regulación inteligente**: Reduce la estimulación cuando la presión es alta y la aumenta cuando es baja.
+3.  **Advertencia por electrochoque**: Activa un electrochoque cuando la presión supera un valor crítico para alertar al usuario.
+4.  **Inicio retardado**: Cuando la presión es baja, la estimulación comienza lentamente después de un retardo.
 5.  **Equilibrio dinámico**: Mantiene un estado de equilibrio cerca de la presión crítica.
 
 ## Diagrama de transición de estados
@@ -63,11 +63,11 @@ Enlace de compra de la abrazadera: [https://item.taobao.com/item.htm?id=72482723
 
 ## Requisitos del dispositivo
 ### Configuración del dispositivo
-| Tipo de dispositivo | ID lógico | Nombre del dispositivo | ¿Obligatorio? | Función |
+| Tipo de dispositivo | ID lógico | Nombre del dispositivo | ¿Requerido? | Función |
 | --- | --- | --- | --- | --- |
-| QIYA | pressure_sensor | Sensor de presión de aire | Sí | Detecta cambios en la presión del esfínter |
-| TD01 | motor_controller | Controlador de motor de eje descentrado | Sí | Proporciona estimulación de intensidad regulable |
-| DIANJI | shock_device | Dispositivo de electroestimulación | No | Electroestimulación de advertencia cuando la presión es demasiado alta |
+| QIYA | pressure_sensor | Sensor de presión | Sí | Detecta cambios en la presión del esfínter |
+| TD01 | motor_controller | Controlador de motor excéntrico | Sí | Proporciona estimulación de intensidad ajustable |
+| DIANJI | shock_device | Dispositivo de electrochoque | No | Electrochoque de advertencia cuando la presión es demasiado alta |
 | ZIDONGSUO | auto_lock | Dispositivo de bloqueo automático | No | Se bloquea al inicio del juego y se desbloquea al finalizar |
 
 ## Configuración de parámetros del juego
@@ -75,22 +75,22 @@ Enlace de compra de la abrazadera: [https://item.taobao.com/item.htm?id=72482723
 | Nombre del parámetro | Tipo | Rango | Valor predeterminado | Descripción |
 | --- | --- | --- | --- | --- |
 | duration | Número | 1-120 minutos | 20 minutos | Duración del juego |
-| criticalPressure | Número | 0-40kPa | 20kPa | Valor de presión crítica |
-| maxMotorIntensity | Número | 1-255 | 200 | Intensidad máxima de TD01 |
+| criticalPressure | Número | 0-40 kPa | 20 kPa | Valor de presión crítica |
+| maxMotorIntensity | Número | 1-255 | 200 | Intensidad máxima del TD01 |
 
 ### Parámetros de control de estimulación
 | Nombre del parámetro | Tipo | Rango | Valor predeterminado | Descripción |
 | --- | --- | --- | --- | --- |
-| lowPressureDelay | Número | 1-30 segundos | 5 segundos | Tiempo de retraso de la estimulación cuando la presión es baja |
-| stimulationRampRateLimit | Número | 1-50 | 10 | Límite de tasa de incremento de intensidad de estimulación (cambio por s no superior a este valor) |
+| lowPressureDelay | Número | 1-30 segundos | 5 segundos | Tiempo de retardo de estimulación cuando la presión es baja |
+| stimulationRampRateLimit | Número | 1-50 | 10 | Límite de tasa de incremento de intensidad de estimulación (cambio por segundo no mayor a este valor) |
 | pressureSensitivity | Número | 0.1-5.0 | 1.0 | Coeficiente de sensibilidad al cambio de presión |
-| stimulationRampRandomPercent | Número | 0-100% | 0% | Porcentaje de perturbación aleatoria de la intensidad de estimulación |
+| stimulationRampRandomPercent | Número | 0-100% | 0% | Porcentaje de perturbación aleatoria en la intensidad de estimulación |
 
-### Parámetros de electroestimulación
+### Parámetros de electrochoque
 | Nombre del parámetro | Tipo | Rango | Valor predeterminado | Descripción |
 | --- | --- | --- | --- | --- |
-| shockIntensity | Número | 10-100V | 20V | Intensidad de la electroestimulación |
-| shockDuration | Número | 0.5-5 segundos | 1 segundo | Duración de la electroestimulación |
+| shockIntensity | Número | 10-100 V | 20 V | Intensidad del electrochoque |
+| shockDuration | Número | 0.5-5 segundos | 1 segundo | Duración del electrochoque |
 
 ## Lógica del algoritmo
 ### Algoritmo de mapeo presión-intensidad
