--- a/i18n/es/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能电机（跳蛋）控制终端.md
@@ -1,6 +1,6 @@
-﻿# Terminal de Control para Motor Inteligente Simple (Huevo Vibratorio)
+# Terminal de Control para Motor Inteligente Simple (Huevo Vibratorio)
 
-# Dirección de compra:
+# Enlace de Compra:
 [Terminal de Control para Motor Inteligente Simple](https://item.taobao.com/item.htm?id=914799922450)
 
 # Características del Producto
@@ -9,11 +9,9 @@
 3. Compatible con huevos vibratorios USB
 4. Batería de gran capacidad
 
-
-
 Dirección del interruptor: Encendido alejándose del puerto de carga, apagado en caso contrario.
 
-# Tutorial de Uso
+# Tutoriales de Uso
 1. Usar Python para controlar el huevo vibratorio, activándolo cada 2 segundos.
 
 [Controlar el huevo vibratorio con Python](../玩法说明/用python控制跳蛋.md)
