--- a/i18n/es/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/设备介绍&购买/简单智能脉冲（电击）终端.md
@@ -1,18 +1,18 @@
-# Terminal de Pulso Inteligente Simple (Electrochoque)
+# Terminal de Pulso Inteligente Simple (Descarga Eléctrica)
 
 Enlace de compra: [https://item.taobao.com/item.htm?id=892309919507](https://item.taobao.com/item.htm?id=892309919507)
 
-Atención:  
-1**. El dispositivo está por defecto en modo seguro (safe mode), donde el voltaje no supera los 36V. Si necesita aumentar el voltaje, establezca la propiedad "safe" del dispositivo en 0. En este modo, el voltaje máximo se limita a 80V, pero tenga en cuenta: en este modo, debe prestar atención a su propia seguridad, y será responsable de cualquier consecuencia si surgen problemas.**
+Precauciones:  
+1**. El dispositivo está por defecto en modo seguro (safe), en este modo el voltaje no supera los 36V. Si necesitas aumentarlo, establece la propiedad `safe` del dispositivo en 0. En este modo, el voltaje máximo se limita a 80V, pero ten en cuenta que debes prestar atención a la seguridad por tu cuenta. Si surgen problemas, deberás asumir las consecuencias.**  
 
-2. **Asegúrese de insertar completamente el conector; de lo contrario, no habrá salida.**
+2. **Asegúrate de insertar el conector completamente; de lo contrario, no habrá salida.**
 
 Escenarios de uso relacionados
 
-1. Aprender Vocabulario
+1. Aprender vocabulario
 
-[Explicación del Método de Uso del Componente "Aprender Vocabulario con Estimulación"](../玩法说明/锥刺股背单词玩法说明.md)
+[Explicación del componente de aprendizaje de vocabulario "Cono y Aguja"](../玩法说明/锥刺股背单词玩法说明.md)
 
-Introducción del Producto
+Descripción del producto
 
-Puede conectarse a una computadora a través de Wi-Fi para controlar la generación de pulsos eléctricos mediante un programa en la computadora.
+Puede conectarse a una computadora mediante WiFi para controlar la generación de pulsos eléctricos a través de un programa en la computadora.
