--- a/i18n/ja/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
+++ b/i18n/ja/docusaurus-plugin-content-docs/current/其他使用说明/硬件固件烧录说明.md
@@ -1,10 +1,10 @@
 # ハードウェアファームウェア書き込み手順
 
-1. ドライバのインストール
-    1. CH340シリアルチップドライバ：[https://www.wch.cn/downloads/CH341SER_EXE.html](https://www.wch.cn/downloads/CH341SER_EXE.html)
-    2. CH343シリアルチップドライバ：[https://www.wch.cn/downloads/CH343SER_EXE.html](https://www.wch.cn/downloads/CH343SER_EXE.html)
+1. ドライバーのインストール
+    1. CH340シリアルチップドライバー：[https://www.wch.cn/downloads/CH341SER_EXE.html](https://www.wch.cn/downloads/CH341SER_EXE.html)
+    2. CH343シリアルチップドライバー：[https://www.wch.cn/downloads/CH343SER_EXE.html](https://www.wch.cn/downloads/CH343SER_EXE.html)
     3. ダウンロード後、直接実行してください
-2. フラッシュツールのダウンロード
+2. Flash Toolのダウンロード
     1. [https://dl.espressif.com/public/flash_download_tool.zip](https://dl.espressif.com/public/flash_download_tool.zip)
     2. 解凍して実行
     3. 使用方法：
@@ -13,5 +13,5 @@
 3. ファームウェアのダウンロード
     1. [https://github.com/jiandanzhineng/hardware/releases/latest](https://github.com/jiandanzhineng/hardware/releases/latest)
     2. ![1768981515944-c052b509-6ae3-41d5-b212-367666940cfd.png](./img/IpJdu5RTAcw-LC13/1768981515944-c052b509-6ae3-41d5-b212-367666940cfd-449925.png)
-    3. デバイスタイプに応じてファームウェアをダウンロード (「merged」と記載されたファームウェアをダウンロード) 電撃-DIANJI 気圧センサー-QIYA オフアクシスモーターコントローラー-TD01 距離センサー-QTZ
+    3. デバイスタイプに応じてファームウェアをダウンロードしてください（「merged」と記載のあるファームウェアをダウンロード）電撃-DIANJI 気圧センサー-QIYA オフアクシスモーターコントローラー-TD01 距離センサー-QTZ
     4. ツールを使用してデバイスの0x0位置に書き込んでください
