--- a/docs/玩法说明/提肛训练玩法.md
+++ b/docs/玩法说明/提肛训练玩法.md
@@ -8,7 +8,7 @@
 ## 软件下载与准备
 安卓手机：[手机客户端（建议采用默认 WiFi，不要进行配网）](../手机客户端（建议采用默认wifi，不要进行配网）.md)
 
-Windows 电脑：[新版电脑客户端使用指南](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Windows 电脑：[新版电脑客户端使用指南](../PC版控制客户端.md)
 
 # 设备与准备
 + 必需设备：`气压传感器（QIYA）`
