--- a/i18n/de/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/其他使用说明/设备连接wifi（配网）/通过电脑客户端配网（需要电脑支持蓝牙）.md
@@ -1,15 +1,15 @@
-# Netzwerkkonfiguration über PC-Client (erfordert Bluetooth-Unterstützung am PC)
+# Netzwerkkonfiguration über den PC-Client (erfordert Bluetooth-Unterstützung am PC)
 
-<font>Hinweis: Diese Methode befindet sich noch in der Testphase und kann instabil sein. Bei einem Fehler können Sie versuchen, den Vorgang abzubrechen und neu zu starten oder eine andere Methode zu verwenden.</font>
+<font>Hinweis: Diese Methode wird noch getestet und ist möglicherweise instabil. Bei einem Fehlschlag können Sie versuchen, den Konfigurationsvorgang zu beenden und neu zu starten oder eine andere Methode zu verwenden.</font>
 
-**<font>Hinweis: Wenn Sie das Standard-WLAN verwenden möchten, führen Sie bitte keine Netzwerkkonfiguration durch. Das Standard-WLAN hat den Namen 'easysmart' und das Passwort '11111111'. Das Gerät verbindet sich automatisch mit dem Standard-WLAN.</font>**
+**<font>Hinweis: Wenn Sie das Standard-WLAN verwenden möchten, führen Sie bitte keine Netzwerkkonfiguration durch. Der Standard-WLAN-Name lautet 'easysmart' und das Passwort ist '11111111'. Das Gerät verbindet sich automatisch mit dem Standard-WLAN.</font>**
 
 ![1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4.png](./img/hURz820DTNcJYUCH/1758201848446-fb959d3a-a790-42c6-befe-ccbb3a9b45f4-096925.png)
 
-1.  Öffnen Sie den Client, klicken Sie auf Geräteverwaltung und dann auf Geräte-Netzwerkkonfiguration.
+1.  Öffnen Sie den Client, klicken Sie auf "Geräteverwaltung" und dann auf "Netzwerkkonfiguration".
 
 ![1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed.png](./img/hURz820DTNcJYUCH/1758201881242-3be10794-3bed-47a5-998f-25a00a8e22ed-155975.png)
 
-2.  Geben Sie den WLAN-Namen (SSID) und das WLAN-Passwort ein (achten Sie darauf, keine Fehler einzugeben, da das Gerät sonst nach erfolgreicher Konfiguration keine Verbindung zum Netzwerk herstellen kann).
-3.  Klicken Sie auf Konfiguration ändern.
-4.  Klicken Sie auf Netzwerkkonfiguration starten, um den Vorgang zu beginnen.
+2.  Geben Sie den WLAN-Namen und das WLAN-Passwort ein (achten Sie darauf, keine Fehler einzugeben, da sonst nach erfolgreicher Konfiguration keine Verbindung zum Internet hergestellt werden kann).
+3.  Klicken Sie auf "Konfiguration ändern".
+4.  Klicken Sie auf "Netzwerkkonfiguration starten", um den Vorgang zu beginnen.
