--- a/i18n/de/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
@@ -1,7 +1,7 @@
-# Günstige, kooperative KI-Modellaufrufkanäle
+# Kooperative kostengünstige KI-Modell-Aufrufkanäle
 
 Registrierungsadresse: [https://dmx.ezsapi.top/login](https://dmx.ezsapi.top/login)
 
-Preisreferenz (siehe unten, alle gängigen Anbieter werden unterstützt):
+Preisreferenz siehe unten (alle gängigen Anbieter werden unterstützt):
 
 ![1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a.png](./img/TzmZXfR3MLY1YFCA/1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a-006145.png)
