--- a/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
@@ -1,108 +1,108 @@
-# Zehenspitzen-Bestrafungsspiel v2
+# Zehenspitzen-Strafspiel v2
 
-Hightech-Bewegungserkennungstraining-Spiel – Herausforderung im Zehenspitzenstand
+Hightech-Körperwahrnehmungs-Selbstdisziplin-Trainingsspiel – Zehenspitzen-Stand-Herausforderung
 
-### V1.4.0 Änderungsprotokoll:
-1.  **TD01-Gerät hinzugefügt**: Verhindert Langeweile bei längerer Untätigkeit, startet nach einer gewissen Zeit ohne Elektroschock-Auslösung mit sukzessive steigender Intensität
-2.  **Taste "Starte Spiel" für automatische Verriegelung hinzugefügt**: Vereinfacht die Bedienung für Einzelpersonen; im manuellen Startmodus kann das Spiel über eine Taste gestartet werden
-3.  **Automatische Verriegelung und TD01 sind optionale Geräte**: Das Spiel kann auch ohne diese Geräte gespielt werden; nur ein Elektroschockgerät und ein QTZ-Sensor sind erforderlich
+### V1.4.0 Update-Inhalte:
+1.  **TD01-Gerät hinzugefügt**: Verhindert Langeweile bei längerer Zeit ohne Stromschlag, startet nach einer bestimmten schlagfreien Zeit mit allmählich steigender Intensität.
+2.  **Schaltflächenstart für zidongsuo hinzugefügt**: Erleichtert Einzelspieler-Bedienung. Nach Aktivierung des manuellen Startmodus kann das Spiel über eine Schaltfläche gestartet werden.
+3.  **zidongsuo und TD01 sind optionale Geräte**: Das Spiel kann auch ohne diese Geräte normal gespielt werden, nur Stromstoßgerät und QTZ-Sensor sind erforderlich.
 
 ## 🎮 Detaillierte Spielanleitung
 ### 📋 Spielvorbereitung
 #### 1. Gerätekonfiguration
 Das System verbindet automatisch vier Kernkomponenten:
 
-+   🔒 **Automatische Verriegelung**: Verriegelt zu Spielbeginn, um vorzeitiges Abbrechen zu verhindern (optionales Gerät)
-+   ⚡ **Elektroschockgerät**: Stellt sofortiges Feedback/Bestrafung bereit
-+   📡 **QTZ-Lasersensor**: Überwacht über zwei Tasten, ob die Ferse gesenkt ist (unter der Ferse platziert)
-+   🎮 **TD01-Gerät**: Optionale Ergänzung, startet nach einer bestimmten Zeit ohne Elektroschock-Auslösung und erhöht sukzessive die Intensität, um den Zehenspitzenstand zu erschweren.
++ 🔒 **Automatische Verriegelung**: Verriegelt bei Spielstart, um vorzeitiges Beenden zu verhindern (optionales Gerät)
++ ⚡ **Stromstoßgerät**: Liefert sofortige Straf-Feedback
++ 📡 **QTZ-Lasersensor**: Überwacht über zwei Tasten, ob die Ferse den Boden berührt (unter der Ferse platziert)
++ 🎮 **TD01-Gerät**: Optionale Erweiterung. Startet nach einer bestimmten schlagfreien Zeit und erhöht allmählich die Intensität, um das Zehenspitzen zu stören.
 
-#### 2. Parameter einstellen
+#### 2. Parameter-Einstellung
 Die Spielschwierigkeit kann angepasst werden:
 
-+   **Spieldauer**: Einstellbar von 1-360 Minuten
-+   **Elektroschock-Intensität**: Level 10-100
-+   **Progressiver Modus**: Mehr Regelverstöße führen zu härteren Strafen
-+   **Sicherheitslimit**: Kann gewählt werden, ob das 30V-Sicherheitslimit überschritten werden darf
-+   **Manueller Start**: Kann gewählt werden, ob das Spiel erst nach Betätigung der Taste am Auto-Lock-Gerät beginnt
-+   **TD01-Verzögerung**: Einstellbar von 1-60 Sekunden (wie lange nach letztem Schock bis zum TD01-Start)
-+   **TD01-Intensitätssteigerung**: Der alle 5 Sekunden hinzukommende Intensitätswert (1-100)
++ **Spieldauer**: Einstellbar von 1-360 Minuten
++ **Stromstoß-Intensität**: 10-100 Stufen
++ **Progressiver Modus**: Je mehr Verstöße, desto härter die Bestrafung
++ **Sicherheitslimit**: Kann gewählt werden, ob das 30V-Sicherheitslimit überschritten werden darf
++ **Manueller Start**: Kann gewählt werden, ob auf einen Tastendruck am auto_lock-Gerät gewartet werden soll, um das Spiel zu starten
++ **TD01-Verzögerung**: Einstellbar von 1-60 Sekunden. Legt fest, wie lange nach dem letzten Stromschlag das TD01 startet.
++ **TD01-Intensitätssteigerung**: Der alle 5 Sekunden hinzugefügte Intensitätswert (1-100)
 
-## 🎯 Konkreter Spielablauf
+## 🎯 Konkrete Spielweise
 ### Kernregeln
-Die Zehenspitzenstand-Position halten, die Ferse darf den Boden auf keinen Fall berühren!
+Halte die Zehenspitzen-Stand-Position ein, die Ferse darf auf keinen Fall den Boden berühren!
 
 #### 1. Spielstart
-+   System verriegelt automatisch (falls Auto-Lock vorhanden), vorzeitiges Beenden ist nicht möglich
-+   Bei aktiviertem manuellem Startmodus muss die Taste am Auto-Lock-Gerät gedrückt werden, um den Timer zu starten
-+   Zeitmessung beginnt, Zehenspitzenstand muss gehalten werden
-+   QTZ-Sensor beginnt mit der Echtzeitüberwachung der Fersenposition
++ Das System verriegelt automatisch (falls automatische Verriegelung vorhanden), ein vorzeitiges Beenden ist nicht möglich.
++ Bei aktiviertem manuellem Startmodus muss die Taste am auto_lock-Gerät gedrückt werden, um die Zeitmessung zu starten.
++ Die Zeitmessung beginnt, die Zehenspitzen-Position muss gehalten werden.
++ Der QTZ-Sensor beginnt mit der Echtzeit-Überwachung der Fersenposition.
 
 #### 2. Überwachungsmechanismus
-+   Der Sensor verfügt über zwei Tasten-Erfassungspunkte (button0 und button1)
-+   Sobald die Ferse eine der Tasten niederdrückt = Regelverstoß
-+   System löst sofort einen Elektroschock als Strafe aus
-+   Der Schock stoppt nur, wenn beide Tasten nicht mehr gedrückt sind
++ Der Sensor hat zwei Taster-Erfassungspunkte (button0 und button1).
++ Sobald die Ferse einen der Taster drückt = Regelverstoß.
++ Das System löst sofort einen Stromstoß als Strafe aus.
++ Der Stromstoß stoppt erst, wenn *beide* Taster nicht mehr gedrückt werden.
 
-#### 3. Bestrafungssystem
-+   🔴 **Sofortige Bestrafung**: Elektroschock beginnt im Moment des Fersenkontakts
-+   📈 **Progressive Intensität**: Mehr Regelverstöße führen zu automatisch steigender Schockintensität
-+   ⏱️ **Anhaltende Bestrafung**: Solange eine Taste gedrückt ist, dauert der Schock an, bis die Ferse vollständig gehoben ist
-+   🎮 **TD01-Erweiterte Strafe**: TD01-Gerät startet nach einer einstellbaren schockfreien Zeit, Intensität steigt alle 5 Sekunden
+#### 3. Straf-System
++ 🔴 **Sofortige Bestrafung**: Stromstoß beginnt im Moment, in dem die Ferse den Taster drückt.
++ 📈 **Progressive Intensität**: Je mehr Verstöße, desto höher steigt automatisch die Stromstoß-Intensität.
++ ⏱️ **Anhaltende Bestrafung**: Solange ein Taster gedrückt ist, hält der Stromstoß an, bis die Ferse vollständig angehoben ist.
++ 🎮 **TD01-Verstärkte Bestrafung**: Startet das TD01-Gerät nach einer festgelegten schlagfreien Zeit, die Intensität steigt alle 5 Sekunden.
 
-#### 4. TD01-Gerätemechanismus
-+   **Verzögerter Start**: Startet automatisch nach einer einstellbaren sekundenlangen schockfreien Phase
-+   **Intensitätssteigerung**: Automatische Steigerung des eingestellten Intensitätswerts alle 5 Sekunden
-+   **Maximale Intensität**: Unterstützt den Bereich 0-255, unbeeinflusst vom Sicherheitslimit
-+   **Automatischer Stopp**: Wird bei Auslösung eines Elektroschocks automatisch gestoppt und zurückgesetzt
+#### 4. TD01-Gerät-Mechanismus
++ **Verzögerter Start**: Startet automatisch nach einer festgelegten Anzahl Sekunden ohne Stromstoß.
++ **Intensitätssteigerung**: Erhöht alle 5 Sekunden automatisch um den eingestellten Wert.
++ **Maximale Intensität**: Unterstützt Bereich 0-255, nicht durch Sicherheitslimit beeinflusst.
++ **Automatischer Stopp**: Wird automatisch gestoppt und zurückgesetzt, wenn ein Stromstoß ausgelöst wird.
 
 #### 5. Spielende
-+   Nach Ablauf der eingestellten Zeit wird automatisch entriegelt
-+   System zeigt vollständigen Leistungsbericht an
-+   Statistiken zu Regelverstößen, Anzahl der Schocks usw.
++ Nach Ablauf der eingestellten Zeit wird automatisch entriegelt.
++ Das System zeigt einen vollständigen Leistungsbericht an.
++ Statistiken wie Anzahl der Verstöße, Anzahl der Stromstöße etc. werden erfasst.
 
-## 💪 Herausforderungen
-+   **Körperliche Herausforderung**: Längerer Zehenspitzenstand testet die Ausdauer der Beinmuskulatur
-+   **Willensprüfung**: Standardhaltung trotz Erschöpfung beibehalten
-+   **Präzise Kontrolle**: Jedes noch so leichte Senken der Ferse wird erkannt
-+   **Psychologisches Spiel**: Ruhe und Konzentration unter der Androhung von Elektroschocks bewahren
-+   **Doppelter Druck**: Elektroschocks vermeiden *und* mit der Störung durch das TD01-Gerät fertig werden
+## 💪 Herausforderungsschwerpunkte
++ **Körperliche Herausforderung**: Langes Stehen auf Zehenspitzen testet die Ausdauer der Beinmuskulatur.
++ **Willensprüfung**: Auch bei Ermüdung muss die korrekte Haltung beibehalten werden.
++ **Präzise Kontrolle**: Jedes noch so leichte Absenken der Ferse wird erfasst.
++ **Psychologisches Spiel**: Ruhe und Konzentration trotz der Abschreckung durch Stromstöße bewahren.
++ **Doppelter Druck**: Sowohl Stromstöße vermeiden als auch mit der Störung durch das TD01-Gerät umgehen.
 
 ## 🏆 Siegbedingungen
-Erfolgreich bis zum Ende der eingestellten Zeit durchhalten, je weniger Regelverstöße, desto besser die Leistung:
+Erfolgreiches Durchhalten bis zum Ende der eingestellten Zeit. Je weniger Verstöße, desto besser die Leistung:
 
-+   🌟 **Perfekte Leistung**: 0 Regelverstöße
-+   ⭐ **Hervorragende Leistung**: 1-2 Regelverstöße
-+   👍 **Gute Leistung**: 3-5 Regelverstöße
-+   😅 **Verbesserungsbedarf**: Mehr als 5 Regelverstöße
++ 🌟 **Perfekte Leistung**: 0 Verstöße
++ ⭐ **Hervorragende Leistung**: 1-2 Verstöße
++ 👍 **Gute Leistung**: 3-5 Verstöße
++ 😅 **Verbesserungsbedarf**: Mehr als 5 Verstöße
 
 ## ⚠️ Sicherheitshinweise
-+   Stellen Sie sicher, dass Sie gesund sind und keine Herzleiden, Epilepsie o.ä. haben
-+   Beginnen Sie mit niedriger Intensität und kurzer Dauer
-+   Beenden Sie das Spiel sofort bei Unwohlsein
-+   Nur für Erwachsene ab 18 Jahren
-+   Elektroschockintensität vorsichtig einstellen, zu hohe Werte können zu Stromverletzungen führen – Risiko selbst verantwortet
-+   Bei Aktivierung der Funktion zur Überschreitung des Sicherheitslimits auf eigene Gefahr
-+   Sorgen Sie für eine sichere Spielumgebung, Aufsicht wird empfohlen
++ Stellen Sie sicher, dass Sie gesund sind und keine Herzprobleme, Epilepsie o.ä. haben.
++ Es wird empfohlen, mit niedrigerer Intensität und kürzerer Dauer zu beginnen.
++ Bei Unwohlsein während des Spiels sofort aufhören.
++ Nur für Erwachsene ab 18 Jahren.
++ Stromstoß-Intensität mit Vorsicht einstellen. Zu hohe Werte können zu Stromschlagverletzungen führen. Das Risiko liegt beim Nutzer.
++ Bei Aktivierung der Funktion zur Überschreitung des Sicherheitslimits auf eigenes Risiko.
++ Sorgen Sie für eine sichere Spielumgebung, empfohlen wird Aufsicht durch eine weitere Person.
 
-## 🔧 Besonderheiten
+## 🔧 Besondere Funktionen
 ### Manueller Startmodus
-+   Nach Laden des Spiels wird eine Warteseite angezeigt
-+   Auto-Lock-Gerät verriegelt zuerst
-+   Taste am Auto-Lock-Gerät muss gedrückt werden, um den Spieltimer zu starten
-+   Geeignet für Szenarien, in denen Vorbereitungszeit benötigt wird
++ Nach dem Laden des Spiels wird eine Warteoberfläche angezeigt.
++ Die automatische Verriegelung wird zuerst aktiviert.
++ Ein Tastendruck am auto_lock-Gerät ist erforderlich, um die Spielzeitmessung zu starten.
++ Geeignet für Situationen, in denen Vorbereitungszeit benötigt wird.
 
-### Echtzeit-Elektroschock-Mechanismus
-+   Kontinuierlicher Elektroschock beginnt sofort bei Betätigung einer beliebigen Taste
-+   Elektroschock stoppt sofort, wenn alle Tasten losgelassen sind
-+   Bietet das direkteste Feedback-System
+### Echtzeit-Stromstoß-Mechanismus
++ Sofortiger und anhaltender Stromstoß bei Drücken einer beliebigen Taste.
++ Sofortiges Stoppen des Stromstoßes, wenn alle Tasten losgelassen werden.
++ Bietet den direktesten Feedback-Mechanismus.
 
-### TD01-Erweiterungssystem
-+   Optionale Zusatzherausforderung
-+   Erhöht die Schwierigkeit bei guter Leistung
-+   Sukzessive Steigerung der Intensität erhöht die Spannung
-+   Unterstützt unabhängige Intensitätssteuerung
+### TD01-Verstärkungssystem
++ Optionale zusätzliche Herausforderungskomponente.
++ Erhöht den Schwierigkeitsgrad bei guter Leistung.
++ Allmählich steigende Intensität erhöht die Spannung im Spiel.
++ Unterstützt unabhängige Intensitätssteuerung.
 
 ---
 
-**Haftungsausschluss**: Dieses Spiel beinhaltet Elektroschockgeräte. Bitte machen Sie sich vor der Nutzung mit den damit verbundenen Risiken vertraut. Die Entwickler übernehmen keine Verantwortung für Schäden, die durch die Nutzung dieses Spiels entstehen. Bitte verwenden Sie es sicher und unter fachkundiger Anleitung.
+**Haftungsausschluss**: Dieses Spiel beinhaltet den Einsatz von Stromstoßgeräten. Bitte informieren Sie sich vor der Nutzung umfassend über die damit verbundenen Risiken. Die Entwickler übernehmen keine Haftung für Schäden, die durch die Nutzung dieses Spiels entstehen. Bitte verwenden Sie es sicher und unter Anleitung von Fachleuten.
