--- a/i18n/de/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/_category_.json
@@ -1,5 +1,9 @@
 {
-  "label": "(PC-Version) Kontroll-Client",
+  "label": "(Desktop-Version) Steuerungsclient",
   "position": 10,
-  "collapsed": false
+  "collapsed": false,
+  "link": {
+    "type": "doc",
+    "id": "新版电脑客户端使用指南"
+  }
 }
