--- a/i18n/de/docusaurus-theme-classic/footer.json
+++ b/i18n/de/docusaurus-theme-classic/footer.json
@@ -36,7 +36,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/facebook/docusaurus"
   },
   "copyright": {
-    "message": "Copyright © 2026 EZS-Dokumentation, Inc. Erstellt mit Docusaurus.",
+    "message": "Copyright © 2026 EZS Dokumentation, Inc. Erstellt mit Docusaurus.",
     "description": "The footer copyright"
   }
 }
