--- a/i18n/de/docusaurus-theme-classic/navbar.json
+++ b/i18n/de/docusaurus-theme-classic/navbar.json
@@ -1,10 +1,10 @@
 {
   "title": {
-    "message": "UnderSilicon Dokumentation",
+    "message": "Dokumentation zu UnderSilicon",
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "EZS Dokumentation Logo",
+    "message": "EZS-Dokumentations-Logo",
     "description": "The alt text of navbar logo"
   },
   "item.label.文档": {
