--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -4,11 +4,11 @@
     "description": "The label for version current"
   },
   "sidebar.tutorialSidebar.category.（电脑版）控制客户端": {
-    "message": "(Desktop Version) Control Client",
+    "message": "(Desktop) Control Client",
     "description": "The label for category '（电脑版）控制客户端' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.玩法说明": {
-    "message": "Gameplay Instructions",
+    "message": "Game Instructions",
     "description": "The label for category '玩法说明' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.设备介绍 & 购买": {
@@ -20,7 +20,7 @@
     "description": "The label for category '其他使用说明' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.设备连接 WiFi（配网）": {
-    "message": "Device Connecting to WiFi (Network Configuration)",
+    "message": "Device Connect to WiFi (Network Configuration)",
     "description": "The label for category '设备连接 WiFi（配网）' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.开发文档": {
