--- a/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/玩法说明/提肛训练玩法.md
@@ -1,32 +1,32 @@
-# Kegel Exercise Gameplay
+# Pelvic Floor Training Gameplay
 
 # Gameplay Overview
-+ Kegel training alternates between "Relaxation Phase" and "Kegel Phase"
-+ The goal is to complete as many "successful Kegels" as possible within the set time
-+ Success or failure is visually indicated on the interface; failure triggers electric shock (if connected and enabled)
++ Pelvic floor training alternates between "Relaxation Phase" and "Contraction Phase"
++ The goal is to achieve as many "Successful Contractions" as possible within the set time
++ Success or failure is visually indicated on the interface; failure triggers an electric shock (if connected and enabled)
 
 ## Software Download & Preparation
-Android Phone: [Mobile Client (Default WiFi recommended, no network configuration needed)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
+Android Phone: [Mobile Client (Recommended to use default WiFi, do not configure network)](../手机客户端（建议采用默认wifi，不要进行配网）.md)
 
-Windows PC: [New PC Client User Guide](../（电脑版）控制客户端/新版电脑客户端使用指南.md)
+Windows PC: [New PC Client User Guide](../PC版控制客户端.md)
 
 # Equipment & Preparation
-+ Required Device: `Air Pressure Sensor (QIYA)`
-+ Optional Devices: `Electric Shock Device (DIANJI)`, `Automatic Lock (ZIDONGSUO)`
-+ Auto-lock on start, auto-unlock on finish (if automatic lock is connected)
++ Required Equipment: `Air Pressure Sensor (QIYA)`
++ Optional Equipment: `Electric Shock Device (DIANJI)`, `Automatic Lock (ZIDONGSUO)`
++ Auto-lock at start, auto-unlock at end (if automatic lock is connected)
 
 ## Device Assembly
-Detach the inflator bulb from the inflatable anal plug. Connect it to the rubber tube of the air pressure sensor, and connect the anal plug's rubber tube to the tee joint of the pressure sensor.
+Detach the inflator bulb from the inflatable anal plug and connect it to the air tube of the pressure sensor. Connect the anal plug's air tube to the T-connector of the pressure sensor.
 
-1. Original state of the anal plug upon receipt (new version has a modified design for better sealing, similar to below)
+1. How the anal plug looks upon arrival (new version has changed appearance, better sealing, similar to below)
 
 ![1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a.jpeg](./img/9EvIrzfBJGTcxowq/1762504366978-62ced3b2-0ddb-4add-83c4-4265b44de13a-569828.jpeg)
 
-2. Remove the inflator bulb
+2. Detach the inflator bulb
 
 ![1762504385470-71f88bb4-ec46-45a7-b7da-9411e87b312d.jpeg](./img/9EvIrzfBJGTcxowq/1762504385470-71f88bb4-ec46-45a7-b7da-9411e87b312d-603550.jpeg)
 
-3. Connect to both ends of the air pressure sensor
+3. Connect to both ends of the pressure sensor
 
 ![1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94.jpeg](./img/9EvIrzfBJGTcxowq/1762504415342-4b3d0f6d-0973-4e29-aa96-7c9d99b47a94-473186.jpeg)
 
@@ -34,11 +34,11 @@ Detach the inflator bulb from the inflatable anal plug. Connect it to the rubber
 
 ![1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6.jpeg](./img/9EvIrzfBJGTcxowq/1762504432568-291c04f6-6509-42d9-aaff-9fcde1eb30a6-408833.jpeg)
 
-5. Optional enhancement if pressure leak seems fast
+5. Optional enhancement if pressure leaks too quickly
 
 ![1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e.jpeg](./img/9EvIrzfBJGTcxowq/1765109117287-4d6fb6c3-b357-4261-913e-a61a3f43393e-647342.jpeg)![1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0.jpeg](./img/9EvIrzfBJGTcxowq/1765109125947-ae400a6d-e14c-4726-a31d-305a8ae034e0-236824.jpeg)
 
-Tighten this clamp at the connection point to reduce pressure leak speed.
+Tighten this clamp at the connection point to reduce pressure leakage speed.
 
 Clamp purchase link: [https://item.taobao.com/item.htm?id=724827233726](https://item.taobao.com/item.htm?id=724827233726) (11-13mm)
 
@@ -48,56 +48,56 @@ Clamp purchase link: [https://item.taobao.com/item.htm?id=724827233726](https://
 ![1764168001256-dac8a8ce-6904-47e8-89a8-53c7035ca08f.png](./img/9EvIrzfBJGTcxowq/1764168001256-dac8a8ce-6904-47e8-89a8-53c7035ca08f-271093.png)
 
 # Parameter Description
-+ `Duration (minutes)`: Total length of the session.
-+ `Kegel Count Goal`: Desired number of successful completions, used for total progress display.
-+ `Pressure Change (kPa)`: The required pressure increase threshold during the Kegel phase (relative to the lowest pressure in the relaxation phase).
-+ `Shock Intensity (V)`: Electric shock intensity upon failure.
-+ `Shock Duration (seconds)`: Duration of electric shock upon failure.
-+ `Single Cycle Time (seconds)`: Duration of each phase, default 10 seconds (Relax 10s → Kegel 10s → Repeat).
++ `Duration (minutes)`: Total game session length
++ `Contraction Count Target`: Desired number of successful contractions, used to display overall progress
++ `Pressure Change (kPa)`: The pressure increase threshold required during the contraction phase (relative to the lowest pressure in the relaxation phase)
++ `Shock Intensity (V)`: Electric shock intensity upon failure
++ `Shock Duration (seconds)`: Duration of electric shock upon failure
++ `Single Cycle Time (seconds)`: Duration of each phase, default 10 seconds (Relax 10s → Contract 10s → Cycle)
 
 # Gameplay Flow
 + Relaxation Phase
-    - Relax and breathe naturally. The system records the "lowest pressure" of this phase as a reference.
-    - After the countdown ends, enter the Kegel phase.
-+ Kegel Phase
-    - Within this phase's duration, increase the pressure to "Lowest Pressure + Pressure Change".
-    - Reaching the target is judged as "Achieved", but you must wait for this phase's countdown to finish before moving to the next round.
-    - If the target is not met before the phase ends, it's judged "Challenge Failed · Starting Shock" (if shock device is available).
+    - Relax and breathe naturally; the system records the "Lowest Pressure" of this phase as a reference
+    - After the countdown ends, enter the contraction phase
++ Contraction Phase
+    - Need to increase the pressure to "Lowest Pressure + Pressure Change" within the duration of this phase
+    - Reaching the target is judged as "Achieved", but you still need to wait for this phase's countdown to end before entering the next round
+    - If the target is not met before the phase ends, it's judged as "Challenge Failed · Starting Shock" (if shock device is available)
 + Phase Alternation
-    - Each round cycles as "Relax → Kegel → Relax → …" until time runs out or the target count is reached.
+    - Each round cycles as "Relax → Contract → Relax → …" until time ends or the target count is reached
 
 # Interface Indicators
-+ Large text at the top shows the current phase (Relaxation Phase/Kegel Phase) and the remaining time for this phase.
++ Large text at the top shows the current phase (Relaxation Phase/Contraction Phase) and remaining time for this phase
 + Overall Progress
     - Count-based progress bar: Completed Count / Target Count
     - Time-based progress bar: Elapsed Time / Total Duration
 + Pressure & Target
     - Current Pressure (kPa)
-    - Minimum Relaxation Pressure (Reference Value)
-    - Kegel Target Pressure (Minimum Pressure + Pressure Change)
-+ Success/Failure Indicator
-    - Success: A green capsule "Achieved" appears next to the number.
-    - Failure: A red capsule "Challenge Failed · Starting Shock" appears next to the number.
-+ Controls & Log
+    - Lowest Relaxation Pressure (Reference Value)
+    - Contraction Target Pressure (Lowest Pressure + Pressure Change)
++ Success/Failure Indicators
+    - Success: Green capsule "Achieved" displayed after the number
+    - Failure: Red capsule "Challenge Failed · Starting Shock" displayed after the number
++ Operations & Log
     - Buttons: Pause, Manual Shock
-    - Log: Displays recent messages and system prompts.
+    - Log: Displays recent messages and system prompts
 
-**Finish & Statistics**
+**End & Statistics**
 
-+ Ends when the set duration is reached or the success count meets the goal.
-+ Automatically unlocks on finish (if automatic lock is connected).
++ Ends when the set duration is reached or the success count meets the target
++ Auto-unlock at end (if automatic lock is connected)
 + Interface displays cumulative success count and shock count, etc.
 
-**Usage Recommendations**
+**Usage Suggestions**
 
-+ For first-time use, it's recommended to set a lower "Pressure Change" to get familiar with the rhythm.
-+ If using an electric shock device, start with low intensity and adjust gradually.
-+ Maintain steady breathing, focus on increasing pressure to the target during the Kegel phase.
++ For first-time use, it's recommended to set "Pressure Change" lower to get familiar with the rhythm
++ If connecting a shock device, start with low intensity and adjust gradually
++ Maintain steady breathing; focus on increasing pressure to the target during the contraction phase
 
 **Quick Start Guide**
 
-+ Connect the air pressure sensor (optionally connect shock device, automatic lock).
-+ Set parameters and start.
-+ Relax during the Relaxation Phase, no effort needed; wait for countdown. Apply force during the Kegel Phase to reach the target.
-+ Upon seeing "Achieved", maintain until the phase ends; failure triggers prompt and shock.
-+ Repeat cycle until finish, review statistics and progress bars to see results.
++ Connect the pressure sensor (optionally connect shock device, automatic lock)
++ Set parameters and start
++ Relaxation phase requires no effort, wait for countdown; Contraction phase requires effort to reach the target
++ Seeing "Achieved" means you can maintain until this phase ends; failure triggers a prompt and shock
++ Repeat the cycle until the end, check statistics and progress bars to understand completion status
