--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -1,42 +1,42 @@
 {
   "theme.ErrorPageContent.title": {
-    "message": "La página se ha bloqueado.",
+    "message": "La página ha fallado.",
     "description": "The title of the fallback page when the page crashed"
   },
   "theme.BackToTopButton.buttonAriaLabel": {
-    "message": "Volver al inicio",
+    "message": "Volver arriba",
     "description": "The ARIA label for the back to top button"
   },
   "theme.blog.archive.title": {
-    "message": "Entradas de blog antiguas",
+    "message": "Publicaciones de blog archivadas",
     "description": "The page & hero title of the blog archive page"
   },
   "theme.blog.archive.description": {
-    "message": "Entradas de blog antiguas",
+    "message": "Publicaciones de blog archivadas",
     "description": "The page & hero description of the blog archive page"
   },
   "theme.blog.paginator.navAriaLabel": {
-    "message": "Navegación por páginas de la lista de entradas del blog",
+    "message": "Navegación de paginación de la lista de publicaciones",
     "description": "The ARIA label for the blog pagination"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "Entradas más recientes",
+    "message": "Publicaciones más recientes",
     "description": "The label used to navigate to the newer blog posts page (previous page)"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "Entradas más antiguas",
+    "message": "Publicaciones más antiguas",
     "description": "The label used to navigate to the older blog posts page (next page)"
   },
   "theme.blog.post.paginator.navAriaLabel": {
-    "message": "Navegación por páginas de entradas del blog",
+    "message": "Navegación de paginación de publicaciones",
     "description": "The ARIA label for the blog posts pagination"
   },
   "theme.blog.post.paginator.newerPost": {
-    "message": "Entrada más reciente",
+    "message": "Publicación más reciente",
     "description": "The blog post button label to navigate to the newer/previous post"
   },
   "theme.blog.post.paginator.olderPost": {
-    "message": "Entrada más antigua",
+    "message": "Publicación más antigua",
     "description": "The blog post button label to navigate to the older/next post"
   },
   "theme.tags.tagsPageLink": {
@@ -44,7 +44,7 @@
     "description": "The label of the link targeting the tag list page"
   },
   "theme.colorToggle.ariaLabel.mode.system": {
-    "message": "modo sistema",
+    "message": "modo del sistema",
     "description": "The name for the system color mode"
   },
   "theme.colorToggle.ariaLabel.mode.light": {
@@ -64,7 +64,7 @@
     "description": "The default description for a category card in the generated index about how many items this category includes"
   },
   "theme.docs.breadcrumbs.navAriaLabel": {
-    "message": "Ruta de navegación",
+    "message": "Ruta de la página",
     "description": "The ARIA label for the breadcrumbs"
   },
   "theme.docs.paginator.navAriaLabel": {
@@ -80,7 +80,7 @@
     "description": "The label used to navigate to the next doc"
   },
   "theme.docs.tagDocListPageTitle.nDocsTagged": {
-    "message": "{count} documentos etiquetados con",
+    "message": "{count} documentos etiquetados",
     "description": "Pluralized label for \"{count} docs tagged\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.docs.tagDocListPageTitle": {
@@ -91,11 +91,11 @@
     "message": "Versión: {versionLabel}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "Esta es la documentación no publicada para la versión {versionLabel} de {siteTitle}.",
+    "message": "Esta es la documentación no publicada para {siteTitle} versión {versionLabel}.",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "Esta es la documentación para la versión {versionLabel} de {siteTitle}, que ya no se mantiene activamente.",
+    "message": "Esta es la documentación para {siteTitle} versión {versionLabel}, que ya no se mantiene activamente.",
     "description": "The label used to tell the user that he's browsing an unmaintained doc version"
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
@@ -115,11 +115,11 @@
     "description": "Title for link to heading"
   },
   "theme.lastUpdated.atDate": {
-    "message": "el {date} ",
+    "message": "el {date}",
     "description": "The words used to describe on which date a page has been last updated"
   },
   "theme.lastUpdated.byUser": {
-    "message": "por {user} ",
+    "message": "por {user}",
     "description": "The words used to describe by who the page has been last updated"
   },
   "theme.lastUpdated.lastUpdatedAtBy": {
@@ -167,15 +167,15 @@
     "description": "The ARIA label for close button of announcement bar"
   },
   "theme.blog.sidebar.navAriaLabel": {
-    "message": "Navegación por entradas recientes del blog",
+    "message": "Navegación de publicaciones recientes",
     "description": "The ARIA label for recent posts in the blog sidebar"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
-    "message": "Expandir la categoría de la barra lateral '{label}'",
+    "message": "Expandir categoría de la barra lateral '{label}'",
     "description": "The ARIA label to expand the sidebar category"
   },
   "theme.DocSidebarItem.collapseCategoryAriaLabel": {
-    "message": "Contraer la categoría de la barra lateral '{label}'",
+    "message": "Contraer categoría de la barra lateral '{label}'",
     "description": "The ARIA label to collapse the sidebar category"
   },
   "theme.IconExternalLink.ariaLabel": {
@@ -191,11 +191,11 @@
     "description": "The first paragraph of the 404 page"
   },
   "theme.NotFound.p2": {
-    "message": "Por favor, contacta al propietario del sitio que te envió el enlace original e infórmale de que su enlace está roto.",
+    "message": "Ponte en contacto con el propietario del sitio desde el que proviene el enlace original e infórmale de que su enlace está roto.",
     "description": "The 2nd paragraph of the 404 page"
   },
   "theme.TOCCollapsible.toggleButtonLabel": {
-    "message": "Resumen de la página",
+    "message": "Descripción general de la página",
     "description": "The label used by the button on the collapsible TOC component"
   },
   "theme.navbar.mobileLanguageDropdown.label": {
@@ -211,7 +211,7 @@
     "description": "The ARIA label for the link to full blog posts from excerpts"
   },
   "theme.blog.post.readingTime.plurals": {
-    "message": "Tiempo de lectura: {readingTime} minutos",
+    "message": "Tiempo de lectura: {readingTime} min",
     "description": "Pluralized label for \"{readingTime} min read\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.CodeBlock.copy": {
@@ -243,7 +243,7 @@
     "description": "The title attribute for collapse button of doc sidebar"
   },
   "theme.docs.sidebar.navAriaLabel": {
-    "message": "Barra lateral de documentación",
+    "message": "Barra lateral de documentos",
     "description": "The ARIA label for the sidebar navigation"
   },
   "theme.docs.sidebar.closeSidebarButtonAriaLabel": {
@@ -275,7 +275,7 @@
     "description": "The ARIA label and title attribute for expand button of doc sidebar"
   },
   "theme.blog.post.plurals": {
-    "message": "{count} entradas",
+    "message": "{count} publicaciones",
     "description": "Pluralized label for \"{count} posts\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.blog.tagTitle": {
@@ -295,7 +295,7 @@
     "description": "The label of the link targeting the blog authors page"
   },
   "theme.blog.author.noPosts": {
-    "message": "Este autor aún no ha escrito ninguna entrada.",
+    "message": "Este autor aún no ha escrito ninguna publicación.",
     "description": "The text for authors with 0 blog post"
   },
   "theme.contentVisibility.unlistedBanner.title": {
@@ -327,63 +327,63 @@
     "description": "The title of the tag list page"
   },
   "homepage.visitDocs": {
-    "message": "Consultar las instrucciones de uso"
+    "message": "Ver instrucciones de uso"
   },
   "homepage.title": {
     "message": "Bienvenido a {title}"
   },
   "homepage.description": {
-    "message": "Sitio web de documentación de UnderSilicon"
+    "message": "Sitio de documentación de UnderSilicon"
   },
   "易于使用": {
     "message": "Fácil de usar"
   },
   "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
-    "message": "Docusaurus se diseñó desde el principio para ser fácil de instalar y usar, poniendo tu sitio en funcionamiento rápidamente."
+    "message": "Docusaurus se diseñó desde el principio para ser fácil de instalar y usar, permitiendo que tu sitio web funcione rápidamente."
   },
   "专注于核心内容": {
-    "message": "Enfocado en el contenido principal"
+    "message": "Enfócate en el contenido principal"
   },
   "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
-    "message": "Docusaurus te permite concentrarte en la documentación misma y deja el trabajo tedioso en nuestras manos. Simplemente coloca tus documentos en el directorio {docs}."
+    "message": "Docusaurus te permite concentrarte en la documentación misma, dejándonos el trabajo tedioso. Simplemente coloca tus documentos en el directorio {docs}."
   },
   "基于 React 构建": {
     "message": "Construido con React"
   },
   "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
-    "message": "Extiende o personaliza el diseño de tu sitio reutilizando React. Docusaurus puede extenderse reutilizando cabeceras y pies de página."
+    "message": "Extiende o personaliza el diseño de tu sitio web reutilizando React. Docusaurus permite la extensión mientras se reutilizan encabezados y pies de página."
   },
   "homepage.downloadClient": {
     "message": "Descargar cliente"
   },
   "硬件生态与连接": {
-    "message": "Ecosistema de hardware y conexión"
+    "message": "Ecosistema de hardware y conectividad"
   },
   "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
-    "message": "Compatible con múltiples dispositivos inteligentes (motores, huevos vibradores, pulsadores, etc.), configuración WiFi ultrarrápida, conexión estable y fácil de usar."
+    "message": "Soporta múltiples dispositivos inteligentes (motores, huevos vibratorios, pulsadores, etc.), configuración WiFi ultrarrápida, conexión estable y fácil de usar."
   },
   "无限创意玩法": {
-    "message": "Modos de juego creativos ilimitados"
+    "message": "Jugabilidad creativa ilimitada"
   },
   "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
-    "message": "Incluye diversos modos interactivos divertidos como detección de flexiones, preguntas y respuestas con descargas, entrenamiento de control de orgasmo, etc., haciendo el control más interesante."
+    "message": "Incluye múltiples modos de interacción divertidos como detección de flexiones, preguntas y respuestas con descargas, entrenamiento de retención, etc., haciendo el control más interesante."
   },
   "全平台控制": {
     "message": "Control multiplataforma"
   },
   "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
-    "message": "Ofrece soporte potente para cliente de PC y móvil (App/mini programa), permitiéndote controlar el estado del dispositivo en cualquier momento y lugar."
+    "message": "Ofrece soporte potente para cliente de escritorio y móvil (App/mini-programa), permitiendo controlar el estado del dispositivo en cualquier momento y lugar."
   },
   "开放开发生态": {
     "message": "Ecosistema de desarrollo abierto"
   },
   "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
-    "message": "Proporciona una interfaz de control en Python y código abierto, permitiendo a los desarrolladores personalizar extensiones y construir juntos la experiencia de juguetes inteligentes."
+    "message": "Proporciona interfaz de control Python y código abierto, permitiendo a los desarrolladores crear extensiones personalizadas y construir juntos la experiencia de juguetes inteligentes."
   },
   "homepage.heroTitle": {
     "message": "Documentación de UnderSilicon"
   },
   "homepage.heroTagline": {
-    "message": "Explora el ecosistema inteligente de UnderSilicon y desbloquea modos de interacción infinitos"
+    "message": "Explora el ecosistema inteligente de UnderSilicon y desbloquea infinitas posibilidades de interacción"
   }
 }
