--- a/i18n/es/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/开发文档/合作低价大模型调用渠道.md
@@ -1,7 +1,7 @@
-﻿# Canal de Invocación de Modelos Grandes de Bajo Costo Cooperativo
+# Canal de llamadas a modelos de lenguaje grandes a bajo costo en colaboración
 
 Dirección de registro: [https://dmx.ezsapi.top/login](https://dmx.ezsapi.top/login)
 
-Los precios de referencia son los siguientes (todos los demás proveedores son compatibles):
+Los precios de referencia son los siguientes (se admiten todos los demás proveedores):
 
 ![1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a.png](./img/TzmZXfR3MLY1YFCA/1765774520410-eda607d8-734e-4dec-85e8-42fbd06a291a-006145.png)
