--- a/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/玩法说明/踮脚惩罚玩法v2.md
@@ -1,108 +1,108 @@
-# Punción de Puntas v2
+# Juego de Castigo de Puntas de Pie v2
 
 Juego de entrenamiento de autodisciplina con tecnología de detección de movimiento - Desafío de mantenerse de puntillas
 
-### Novedades de la versión V1.4.0:
-1.  **Añadido dispositivo TD01**: Previene el aburrimiento en largos periodos sin estímulos; se activa después de un tiempo sin descargas, incrementando la intensidad gradualmente.
-2.  **Añadida operación de inicio del juego mediante botón del 'zidongsuo'**: Facilita la operación en solitario. Una vez activado el modo de inicio manual, el juego puede comenzar presionando un botón.
-3.  **'zidongsuo' y TD01 son dispositivos opcionales**: El juego puede funcionar normalmente sin estos dispositivos, solo se necesita el dispositivo de descarga y el sensor QTZ.
+### Contenido de la actualización V1.4.0:
+1.  **Se añadió el dispositivo TD01**: Previene el aburrimiento por períodos prolongados sin descargas; se activa después de un tiempo sin descargas, con intensidad que aumenta gradualmente.
+2.  **Se añadió la operación de inicio del juego mediante botón en el auto_lock**: Facilita la operación individual; después de activar el modo de inicio manual, el juego puede iniciarse presionando un botón.
+3.  **El auto_lock y el TD01 son dispositivos opcionales**: El juego puede jugarse normalmente sin estos dispositivos; solo se necesitan el dispositivo de descarga eléctrica y el sensor QTZ.
 
-## 🎮 Detalles del Juego
+## 🎮 Explicación Detallada del Juego
 ### 📋 Preparación del Juego
 #### 1. Configuración de Dispositivos
-El sistema conecta automáticamente cuatro dispositivos principales:
+El sistema conectará automáticamente cuatro dispositivos principales:
 
-+   🔒 **Cerradura automática (Auto-lock)**: Se bloquea al inicio del juego, impidiendo la salida durante la partida (dispositivo opcional).
-+   ⚡ **Dispositivo de descargas**: Proporciona el castigo de retroalimentación inmediata.
-+   📡 **Sensor láser QTZ**: Monitorea si el talón está apoyado mediante dos botones (se coloca debajo del talón).
-+   🎮 **Dispositivo TD01**: Dispositivo potenciador opcional. Se activa después de un tiempo determinado sin que se desencadene una descarga, incrementando gradualmente su intensidad para interferir con el equilibrio en puntillas.
++ 🔒 **Auto_lock**: Se bloquea al inicio del juego para evitar salidas prematuras (dispositivo opcional)
++ ⚡ **Dispositivo de descarga eléctrica**: Proporciona castigo de retroalimentación inmediata
++ 📡 **Sensor láser QTZ**: Monitorea si los talones están apoyados mediante dos botones (colocado debajo de los talones)
++ 🎮 **Dispositivo TD01**: Dispositivo de mejora opcional; se activa después de un tiempo sin descargas, aumentando gradualmente la intensidad para interferir con mantenerse de puntillas.
 
 #### 2. Configuración de Parámetros
-Se puede personalizar la dificultad del juego:
+La dificultad del juego se puede personalizar:
 
-+   **Duración del juego**: Ajustable de 1 a 360 minutos.
-+   **Intensidad de la descarga**: Niveles del 10 al 100.
-+   **Modo progresivo**: A más infracciones, mayor es el castigo.
-+   **Límite de seguridad**: Opción para permitir o no superar el límite seguro de 30V.
-+   **Inicio manual**: Opción para esperar a que se presione el botón del dispositivo auto_lock para comenzar el juego.
-+   **Retardo del TD01**: Ajustable de 1 a 60 segundos. Tiempo sin descargas antes de que se active el TD01.
-+   **Incremento de intensidad del TD01**: Valor de intensidad añadido cada 5 segundos (1-100).
++ **Duración del juego**: Ajustable de 1 a 360 minutos
++ **Intensidad de la descarga**: Niveles de 10 a 100
++ **Modo progresivo**: Cuantas más infracciones, más severo el castigo
++ **Límite de seguridad**: Se puede elegir si permitir exceder el límite de seguridad de 30V
++ **Inicio manual**: Se puede elegir esperar a que se presione el botón del dispositivo auto_lock para comenzar el juego
++ **Retardo del TD01**: Ajustable de 1 a 60 segundos, tiempo sin descargas antes de activar el TD01
++ **Incremento de intensidad del TD01**: Valor de intensidad añadido cada 5 segundos (1-100)
 
-## 🎯 Mecánica de Juego
+## 🎯 Jugabilidad Específica
 ### Reglas Principales
-¡Mantén la postura de puntillas, los talones NO deben tocar el suelo bajo ningún concepto!
+¡Mantén la postura de puntillas, los talones absolutamente NO deben tocar el suelo!
 
 #### 1. Inicio del Juego
-+   El sistema se bloquea automáticamente (si hay dispositivo de auto-lock), imposibilitando salir durante la partida.
-+   Si está activado el modo de inicio manual, se debe presionar el botón del dispositivo auto_lock para comenzar la cuenta atrás.
-+   Comienza la cuenta atrás. Debes mantener la postura de puntillas.
-+   El sensor QTZ comienza a monitorear en tiempo real la posición del talón.
++ El sistema se bloquea automáticamente (si hay dispositivo auto_lock), imposibilitando salir a mitad del juego
++ Si se activa el modo de inicio manual, se debe presionar el botón del dispositivo auto_lock para comenzar el conteo
++ Comienza el conteo del tiempo, se debe mantener la postura de puntillas
++ El sensor QTZ comienza a monitorear en tiempo real la posición de los talones
 
 #### 2. Mecanismo de Monitoreo
-+   El sensor tiene dos puntos de detección (botón0 y botón1).
-+   Presionar cualquiera de los botones con el talón = Infracción.
-+   El sistema activa inmediatamente el castigo de descarga.
-+   La descarga solo se detendrá cuando NINGUNO de los dos botones esté siendo presionado.
++ El sensor tiene dos puntos de detección de botones (button0 y button1)
++ Si el talón presiona cualquiera de los botones = infracción
++ El sistema activa inmediatamente el castigo de descarga eléctrica
++ La descarga solo se detiene cuando NINGUNO de los dos botones está presionado
 
 #### 3. Sistema de Castigos
-+   🔴 **Castigo inmediato**: La descarga comienza en el instante en que el talón presiona un botón.
-+   📈 **Intensidad progresiva**: A más infracciones, la intensidad de la descarga aumenta automáticamente.
-+   ⏱️ **Castigo continuo**: La descarga persiste mientras el botón esté presionado, hasta que se levante completamente.
-+   🎮 **Castigo potenciado con TD01**: El dispositivo TD01 se activa después de un tiempo especificado sin descargas, incrementando su intensidad cada 5 segundos.
++ 🔴 **Castigo inmediato**: La descarga eléctrica comienza en el instante en que el talón presiona un botón
++ 📈 **Intensidad progresiva**: Cuantas más infracciones, mayor la intensidad de la descarga automáticamente
++ ⏱️ **Castigo continuo**: La descarga continúa mientras el botón esté presionado, hasta que se levante completamente
++ 🎮 **Castigo mejorado con TD01**: El dispositivo TD01 se activa después de un tiempo especificado sin descargas, con intensidad que aumenta cada 5 segundos
 
 #### 4. Mecanismo del Dispositivo TD01
-+   **Activación retardada**: Se activa automáticamente tras un número específico de segundos sin descargas.
-+   **Incremento de intensidad**: Aumenta automáticamente la intensidad configurada cada 5 segundos.
-+   **Intensidad máxima**: Admite un rango de 0-255, no afectado por el límite de seguridad.
-+   **Parada automática**: Se detiene y reinicia automáticamente cuando se desencadena una descarga.
++ **Activación retardada**: Se activa automáticamente después de un número especificado de segundos sin descargas
++ **Incremento de intensidad**: Aumenta automáticamente la intensidad según el valor establecido cada 5 segundos
++ **Intensidad máxima**: Admite un rango de 0-255, no afectado por el límite de seguridad
++ **Parada automática**: Se detiene y reinicia automáticamente cuando se activa una descarga eléctrica
 
 #### 5. Fin del Juego
-+   Se desbloquea automáticamente al cumplirse el tiempo establecido.
-+   El sistema muestra un informe completo del rendimiento.
-+   Se registran datos como el número de infracciones, descargas, etc.
++ Se desbloquea automáticamente después de aguantar el tiempo establecido
++ El sistema muestra un informe completo del rendimiento
++ Se muestran estadísticas como número de infracciones, número de descargas, etc.
 
 ## 💪 Puntos Clave del Desafío
-+   **Desafío físico**: Mantenerse de puntillas durante mucho tiempo pone a prueba la resistencia muscular de las piernas.
-+   **Prueba de voluntad**: Mantener la postura correcta frente a la fatiga.
-+   **Control preciso**: Cualquier descenso sutil del talón será detectado.
-+   **Tensión psicológica**: Mantener la calma y la concentración bajo la amenaza de la descarga.
-+   **Doble presión**: Evitar las descargas y lidiar simultáneamente con la interferencia del dispositivo TD01.
++ **Desafío físico**: Mantenerse de puntillas durante mucho tiempo pone a prueba la resistencia muscular de las piernas
++ **Prueba de fuerza de voluntad**: Mantener la postura correcta frente al cansancio
++ **Control preciso**: Cualquier leve descenso del talón será detectado
++ **Juego psicológico**: Mantener la calma y la concentración bajo la amenaza de descargas
++ **Doble presión**: Evitar las descargas y lidiar con la interferencia del dispositivo TD01
 
 ## 🏆 Condiciones de Victoria
-Lograr mantenerse hasta que finalice el tiempo establecido. Cuantas menos infracciones, mejor el rendimiento:
+Lograr aguantar hasta que termine el tiempo establecido; cuantas menos infracciones, mejor el rendimiento:
 
-+   🌟 **Rendimiento perfecto**: 0 infracciones.
-+   ⭐ **Rendimiento excelente**: 1-2 infracciones.
-+   👍 **Rendimiento bueno**: 3-5 infracciones.
-+   😅 **Necesita mejorar**: Más de 5 infracciones.
++ 🌟 **Rendimiento perfecto**: 0 infracciones
++ ⭐ **Rendimiento excelente**: 1-2 infracciones
++ 👍 **Rendimiento bueno**: 3-5 infracciones
++ 😅 **Necesita mejorar**: Más de 5 infracciones
 
 ## ⚠️ Recordatorio de Seguridad
-+   Asegúrate de tener buena salud, sin enfermedades cardíacas, epilepsia, etc.
-+   Se recomienda comenzar con intensidades bajas y tiempos cortos.
-+   Si sientes malestar durante el juego, detente inmediatamente.
-+   Solo para adultos mayores de 18 años.
-+   Configura la intensidad de la descarga con precaución. Un nivel excesivo puede causar lesiones por electrocución; asumes el riesgo.
-+   Si activas la función que supera el límite de seguridad, asumes el riesgo.
-+   Asegura un entorno de juego seguro; se recomienda supervisión.
++ Asegúrate de tener buena salud, sin enfermedades cardíacas, epilepsia, etc.
++ Se recomienda comenzar con intensidades bajas y tiempos cortos
++ Detente inmediatamente si sientes malestar durante el juego
++ Solo para adultos mayores de 18 años
++ Configura la intensidad de la descarga con precaución; niveles demasiado altos pueden causar lesiones por electrocución, el riesgo es asumido por el usuario
++ Si se habilita la función de exceder el límite de seguridad, el riesgo es asumido por el usuario
++ Asegura un entorno de juego seguro, se recomienda supervisión
 
 ## 🔧 Funciones Especiales
 ### Modo de Inicio Manual
-+   Al cargarse el juego, se muestra una pantalla de espera.
-+   El dispositivo de auto-lock se bloquea primero.
-+   Es necesario presionar el botón del dispositivo auto_lock para iniciar la cuenta atrás del juego.
-+   Adecuado para situaciones que requieren tiempo de preparación.
++ Muestra una pantalla de espera después de cargar el juego
++ El dispositivo auto_lock se bloquea primero
++ Se debe presionar el botón del dispositivo auto_lock para comenzar el conteo del juego
++ Adecuado para escenarios que requieren tiempo de preparación
 
 ### Mecanismo de Descarga en Tiempo Real
-+   La descarga continua comienza inmediatamente al presionar cualquier botón.
-+   Se detiene inmediatamente al levantar todos los botones.
-+   Proporciona el mecanismo de retroalimentación más directo.
++ La descarga continua comienza inmediatamente cuando se presiona cualquier botón
++ La descarga se detiene inmediatamente cuando se levantan todos los botones
++ Proporciona el mecanismo de retroalimentación más directo
 
-### Sistema Potenciador TD01
-+   Dispositivo de desafío adicional opcional.
-+   Aumenta la dificultad cuando el rendimiento es bueno.
-+   La intensidad aumenta gradualmente, incrementando la tensión del juego.
-+   Admite control de intensidad independiente.
+### Sistema de Mejora TD01
++ Dispositivo de desafío adicional opcional
++ Aumenta la dificultad cuando el rendimiento es bueno
++ La intensidad aumenta gradualmente, incrementando la tensión del juego
++ Admite control de intensidad independiente
 
 ---
 
-**Descargo de responsabilidad**: Este juego involucra dispositivos de descarga eléctrica. Comprende plenamente los riesgos asociados antes de usarlo. Los desarrolladores no asumen responsabilidad por ningún daño causado por el uso de este juego. Úsalo de forma segura bajo la supervisión de profesionales.
+**Descargo de responsabilidad**: Este juego involucra dispositivos de descarga eléctrica; comprende plenamente los riesgos asociados antes de usarlo. Los desarrolladores no se hacen responsables de ningún daño causado por el uso de este juego. Úsalo de manera segura bajo la guía de profesionales.
