--- a/i18n/es/docusaurus-theme-classic/navbar.json
+++ b/i18n/es/docusaurus-theme-classic/navbar.json
@@ -4,7 +4,7 @@
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "Logo de la Documentación de EZS",
+    "message": "Logo de la documentación de EZS",
     "description": "The alt text of navbar logo"
   },
   "item.label.文档": {
