--- a/i18n/ja/docusaurus-theme-classic/footer.json
+++ b/i18n/ja/docusaurus-theme-classic/footer.json
@@ -12,7 +12,7 @@
     "description": "The title of the footer links column with title=更多 in the footer"
   },
   "link.item.label.使用说明": {
-    "message": "使用方法",
+    "message": "使い方",
     "description": "The label of footer link with label=使用说明 linking to /docs/"
   },
   "link.item.label.Stack Overflow": {
